@@ -24,11 +24,8 @@ package io.crate.execution.engine.collect.stats;
 import static io.crate.planner.Plan.StatementType.SELECT;
 import static io.crate.planner.Plan.StatementType.UNDEFINED;
 import static io.crate.testing.TestingHelpers.createNodeContext;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.is;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.lang.reflect.Field;
 import java.util.Collections;
@@ -39,19 +36,15 @@ import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.indices.breaker.HierarchyCircuitBreakerService;
-import org.hamcrest.Matchers;
-import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -64,39 +57,34 @@ import io.crate.expression.reference.sys.operation.OperationContextLog;
 import io.crate.metadata.NodeContext;
 import io.crate.metadata.sys.MetricsView;
 import io.crate.planner.operators.StatementClassifier.Classification;
+import io.crate.role.Role;
+import io.crate.role.metadata.RolesHelper;
 import io.crate.test.integration.CrateDummyClusterServiceUnitTest;
-import io.crate.user.User;
 
 public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
-    private ScheduledExecutorService scheduler;
     private HierarchyCircuitBreakerService breakerService;
     private ClusterSettings clusterSettings;
     private NodeContext nodeCtx;
 
     @Before
-    public void createScheduler() {
+    public void createJobsLogDependencies() {
         clusterSettings = clusterService.getClusterSettings();
         breakerService = new HierarchyCircuitBreakerService(Settings.EMPTY, clusterSettings);
-        scheduler = Executors.newSingleThreadScheduledExecutor();
         nodeCtx = createNodeContext();
-    }
-
-    @After
-    public void terminateScheduler() throws InterruptedException {
-        terminate(scheduler);
     }
 
     @Test
     public void testDefaultSettings() {
-        JobsLogService stats = new JobsLogService(Settings.EMPTY, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        assertThat(stats.isEnabled(), is(true));
-        assertThat(stats.jobsLogSize, is(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY)));
-        assertThat(stats.operationsLogSize, is(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY)));
-        assertThat(stats.jobsLogExpiration, is(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getDefault(Settings.EMPTY)));
-        assertThat(stats.operationsLogExpiration, is(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getDefault(Settings.EMPTY)));
-        assertThat(stats.get().jobsLog(), Matchers.instanceOf(FilteredLogSink.class));
-        assertThat(stats.get().operationsLog(), Matchers.instanceOf(QueueSink.class));
+        try (JobsLogService stats = new JobsLogService(Settings.EMPTY, clusterService, nodeCtx, breakerService)) {
+            assertThat(stats.isEnabled()).isTrue();
+            assertThat(stats.jobsLogSize).isEqualTo(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY));
+            assertThat(stats.operationsLogSize).isEqualTo(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY));
+            assertThat(stats.jobsLogExpiration).isEqualTo(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getDefault(Settings.EMPTY));
+            assertThat(stats.operationsLogExpiration).isEqualTo(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getDefault(Settings.EMPTY));
+            assertThat(stats.get().jobsLog()).isExactlyInstanceOf(FilteredLogSink.class);
+            assertThat(stats.get().operationsLog()).isExactlyInstanceOf(QueueSink.class);
+        }
     }
 
     @Test
@@ -104,35 +92,37 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
         Settings settings = Settings.builder()
             .put(JobsLogService.STATS_JOBS_LOG_FILTER.getKey(), "stmt like 'select%'")
             .build();
-        JobsLogService stats = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
+        try (JobsLogService stats = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
 
-        jobsLogSink.add(new JobContextLog(
-            new JobContext(UUID.randomUUID(), "insert into", 10L, User.CRATE_USER, null), null, 20L));
-        jobsLogSink.add(new JobContextLog(
-            new JobContext(UUID.randomUUID(), "select * from t1", 10L, User.CRATE_USER, null), null, 20L));
-        assertThat(StreamSupport.stream(jobsLogSink.spliterator(), false).count(), is(1L));
+            jobsLogSink.add(new JobContextLog(
+                new JobContext(UUID.randomUUID(), "insert into", 10L, Role.CRATE_USER, null), null, 20L));
+            jobsLogSink.add(new JobContextLog(
+                new JobContext(UUID.randomUUID(), "select * from t1", 10L, Role.CRATE_USER, null), null, 20L));
+            assertThat(StreamSupport.stream(jobsLogSink.spliterator(), false).count()).isEqualTo(1L);
+        }
     }
 
     @Test
     public void testFilterIsValidatedOnUpdate() {
         // creating the service registers the update listener
-        new JobsLogService(Settings.EMPTY, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-
-        expectedException.expectMessage("illegal value can't update [stats.jobs_log_filter] from [true] to [statement = 'x']");
-        clusterSettings.applySettings(
-            Settings.builder().put(JobsLogService.STATS_JOBS_LOG_FILTER.getKey(), "statement = 'x'").build());
+        try (var _ = new JobsLogService(Settings.EMPTY, clusterService, nodeCtx, breakerService)) {
+            var settings = Settings.builder()
+                .put(JobsLogService.STATS_JOBS_LOG_FILTER.getKey(), "statement = 'x'")
+                .build();
+            assertThatThrownBy(() -> clusterSettings.applySettings(settings))
+                .hasMessage("illegal value can't update [stats.jobs_log_filter] from [true] to [statement = 'x']");
+        }
     }
 
     @Test
     public void testErrorIsRaisedInitiallyOnInvalidFilterExpression() {
         Settings settings = Settings.builder()
-            .put(JobsLogService.STATS_JOBS_LOG_FILTER.getKey(), "invalid_column = 10")
-            .build();
+                .put(JobsLogService.STATS_JOBS_LOG_FILTER.getKey(), "invalid_column = 10")
+                .build();
 
-        expectedException.expectMessage("Invalid filter expression: invalid_column = 10: Column invalid_column unknown");
-        new JobsLogService(settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
+        assertThatThrownBy(() -> new JobsLogService(settings, clusterService, nodeCtx, breakerService).close())
+            .hasMessage("Invalid filter expression: invalid_column = 10: Column invalid_column unknown");
     }
 
     @Test
@@ -146,26 +136,26 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
             .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 100)
             .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 100)
             .build();
-        JobsLogService stats = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
-        LogSink<OperationContextLog> operationsLogSink = (LogSink<OperationContextLog>) stats.get().operationsLog();
+        try (JobsLogService stats = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
+            LogSink<OperationContextLog> operationsLogSink = (LogSink<OperationContextLog>) stats.get().operationsLog();
 
-        assertThat(stats.isEnabled(), is(false));
-        assertThat(stats.jobsLogSize, is(100));
-        assertThat(jobsLogSink, Matchers.instanceOf(NoopLogSink.class));
-        assertThat(stats.operationsLogSize, is(100));
-        assertThat(operationsLogSink, Matchers.instanceOf(NoopLogSink.class));
+            assertThat(stats.isEnabled()).isFalse();
+            assertThat(stats.jobsLogSize).isEqualTo(100);
+            assertThat(jobsLogSink).isExactlyInstanceOf(NoopLogSink.class);
+            assertThat(stats.operationsLogSize).isEqualTo(100);
+            assertThat(operationsLogSink).isExactlyInstanceOf(NoopLogSink.class);
 
-        clusterService.getClusterSettings().applySettings(Settings.builder()
-            .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
-            .build());
+            clusterService.getClusterSettings().applySettings(Settings.builder()
+                .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
+                .build());
 
-        assertThat(stats.isEnabled(), is(true));
-        assertThat(stats.jobsLogSize, is(100));
-        assertThat(stats.get().jobsLog(), Matchers.instanceOf(FilteredLogSink.class));
-        assertThat(stats.operationsLogSize, is(100));
-        assertThat(stats.get().operationsLog(), Matchers.instanceOf(QueueSink.class));
+            assertThat(stats.isEnabled()).isTrue();
+            assertThat(stats.jobsLogSize).isEqualTo(100);
+            assertThat(stats.get().jobsLog()).isExactlyInstanceOf(FilteredLogSink.class);
+            assertThat(stats.operationsLogSize).isEqualTo(100);
+            assertThat(stats.get().operationsLog()).isExactlyInstanceOf(QueueSink.class);
+        }
     }
 
     @Test
@@ -175,102 +165,102 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
             .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 100)
             .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 100)
             .build();
-        JobsLogService stats = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        Supplier<LogSink<JobContextLog>> jobsLogSink = () -> (LogSink<JobContextLog>) stats.get().jobsLog();
-        Supplier<LogSink<OperationContextLog>> operationsLogSink = () -> (LogSink<OperationContextLog>) stats.get().operationsLog();
+        try (var stats = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            Supplier<LogSink<JobContextLog>> jobsLogSink = () -> (LogSink<JobContextLog>) stats.get().jobsLog();
+            Supplier<LogSink<OperationContextLog>> operationsLogSink = () -> (LogSink<OperationContextLog>) stats.get().operationsLog();
 
-        // sinks are still of type QueueSink
-        assertThat(jobsLogSink.get(), Matchers.instanceOf(FilteredLogSink.class));
-        assertThat(operationsLogSink.get(), Matchers.instanceOf(QueueSink.class));
+            // sinks are still of type QueueSink
+            assertThat(jobsLogSink.get()).isExactlyInstanceOf(FilteredLogSink.class);
+            assertThat(operationsLogSink.get()).isExactlyInstanceOf(QueueSink.class);
 
-        assertThat(inspectRamAccountingQueue((QueueSink) ((FilteredLogSink) jobsLogSink.get()).delegate),
-            Matchers.instanceOf(BlockingEvictingQueue.class));
-        assertThat(inspectRamAccountingQueue((QueueSink) operationsLogSink.get()),
-            Matchers.instanceOf(BlockingEvictingQueue.class));
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) ((FilteredLogSink<?>) jobsLogSink.get()).delegate))
+                .isExactlyInstanceOf(BlockingEvictingQueue.class);
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) operationsLogSink.get()))
+                .isExactlyInstanceOf(BlockingEvictingQueue.class);
 
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getKey(), "10s")
-            .put(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getKey(), "10s")
-            .build());
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getKey(), "10s")
+                .put(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getKey(), "10s")
+                .build());
 
-        assertThat(inspectRamAccountingQueue((QueueSink) ((FilteredLogSink<JobContextLog>) jobsLogSink.get()).delegate),
-            Matchers.instanceOf(ConcurrentLinkedDeque.class));
-        assertThat(inspectRamAccountingQueue((QueueSink) operationsLogSink.get()),
-            Matchers.instanceOf(ConcurrentLinkedDeque.class));
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) ((FilteredLogSink<JobContextLog>) jobsLogSink.get()).delegate))
+                .isExactlyInstanceOf(ConcurrentLinkedDeque.class);
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) operationsLogSink.get()))
+                .isExactlyInstanceOf(ConcurrentLinkedDeque.class);
 
-        // set all to 0 but don't disable stats
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 0)
-            .put(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getKey(), "0s")
-            .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 0)
-            .put(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getKey(), "0s")
-            .build());
-        assertThat(jobsLogSink.get(), Matchers.instanceOf(NoopLogSink.class));
-        assertThat(operationsLogSink.get(), Matchers.instanceOf(NoopLogSink.class));
-        assertThat(stats.isEnabled(), is(true));
+            // set all to 0 but don't disable stats
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 0)
+                .put(JobsLogService.STATS_JOBS_LOG_EXPIRATION_SETTING.getKey(), "0s")
+                .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 0)
+                .put(JobsLogService.STATS_OPERATIONS_LOG_EXPIRATION_SETTING.getKey(), "0s")
+                .build());
+            assertThat(jobsLogSink.get()).isExactlyInstanceOf(NoopLogSink.class);
+            assertThat(operationsLogSink.get()).isExactlyInstanceOf(NoopLogSink.class);
+            assertThat(stats.isEnabled()).isTrue();
 
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 200)
-            .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 200)
-            .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
-            .build());
-        assertThat(jobsLogSink.get(), Matchers.instanceOf(FilteredLogSink.class));
-        assertThat(inspectRamAccountingQueue((QueueSink) ((FilteredLogSink<JobContextLog>) jobsLogSink.get()).delegate),
-            Matchers.instanceOf(BlockingEvictingQueue.class));
-        assertThat(operationsLogSink.get(), Matchers.instanceOf(QueueSink.class));
-        assertThat(inspectRamAccountingQueue((QueueSink) operationsLogSink.get()),
-            Matchers.instanceOf(BlockingEvictingQueue.class));
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 200)
+                .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 200)
+                .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
+                .build());
+            assertThat(jobsLogSink.get()).isExactlyInstanceOf(FilteredLogSink.class);
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) ((FilteredLogSink<JobContextLog>) jobsLogSink.get()).delegate))
+                .isExactlyInstanceOf(BlockingEvictingQueue.class);
+            assertThat(operationsLogSink.get()).isExactlyInstanceOf(QueueSink.class);
+            assertThat(inspectRamAccountingQueue((QueueSink<?>) operationsLogSink.get()))
+                .isExactlyInstanceOf(BlockingEvictingQueue.class);
 
-        // disable stats
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), false)
-            .build());
-        assertThat(stats.isEnabled(), is(false));
-        assertThat(jobsLogSink.get(), Matchers.instanceOf(NoopLogSink.class));
-        assertThat(operationsLogSink.get(), Matchers.instanceOf(NoopLogSink.class));
+            // disable stats
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), false)
+                .build());
+            assertThat(stats.isEnabled()).isFalse();
+            assertThat(jobsLogSink.get()).isExactlyInstanceOf(NoopLogSink.class);
+            assertThat(operationsLogSink.get()).isExactlyInstanceOf(NoopLogSink.class);
+        }
     }
 
-    private static Queue inspectRamAccountingQueue(QueueSink sink) throws Exception {
+    private static Queue<?> inspectRamAccountingQueue(QueueSink<?> sink) throws Exception {
         Field field = sink.getClass().getDeclaredField("queue");
         field.setAccessible(true);
-        RamAccountingQueue q = (RamAccountingQueue) field.get(sink);
+        RamAccountingQueue<?> q = (RamAccountingQueue<?>) field.get(sink);
         field = field.get(sink).getClass().getDeclaredField("delegate");
         field.setAccessible(true);
-        return (Queue) field.get(q);
+        return (Queue<?>) field.get(q);
     }
 
     @Test
     public void testLogsArentWipedOnSizeChange() {
         Settings settings = Settings.builder()
             .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true).build();
-        JobsLogService stats = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
-        LogSink<OperationContextLog> operationsLogSink = (LogSink<OperationContextLog>) stats.get().operationsLog();
+        try (var stats = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            LogSink<JobContextLog> jobsLogSink = (LogSink<JobContextLog>) stats.get().jobsLog();
+            LogSink<OperationContextLog> operationsLogSink = (LogSink<OperationContextLog>) stats.get().operationsLog();
 
-        Classification classification =
-            new Classification(SELECT, Collections.singleton("Collect"));
+            Classification classification =
+                new Classification(SELECT, Collections.singleton("Collect"));
 
-        jobsLogSink.add(new JobContextLog(
-            new JobContext(UUID.randomUUID(), "select 1", 1L, User.CRATE_USER, classification), null));
+            jobsLogSink.add(new JobContextLog(
+                new JobContext(UUID.randomUUID(), "select 1", 1L, Role.CRATE_USER, classification), null));
 
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
-            .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 200).build());
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
+                .put(JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getKey(), 200).build());
 
-        assertThat(StreamSupport.stream(stats.get().jobsLog().spliterator(), false).count(), is(1L));
+            assertThat(StreamSupport.stream(stats.get().jobsLog().spliterator(), false).count()).isEqualTo(1L);
 
-        operationsLogSink.add(new OperationContextLog(
-            new OperationContext(1, UUID.randomUUID(), "foo", 2L, () -> -1), null));
-        operationsLogSink.add(new OperationContextLog(
-            new OperationContext(1, UUID.randomUUID(), "foo", 3L, () -> 1), null));
+            operationsLogSink.add(new OperationContextLog(
+                new OperationContext(1, UUID.randomUUID(), "foo", 2L, () -> -1), null));
+            operationsLogSink.add(new OperationContextLog(
+                new OperationContext(1, UUID.randomUUID(), "foo", 3L, () -> 1), null));
 
-        clusterSettings.applySettings(Settings.builder()
-            .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
-            .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 1).build());
+            clusterSettings.applySettings(Settings.builder()
+                .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true)
+                .put(JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getKey(), 1).build());
 
-        assertThat(StreamSupport.stream(stats.get().operationsLog().spliterator(), false).count(), is(1L));
+            assertThat(StreamSupport.stream(stats.get().operationsLog().spliterator(), false).count()).isEqualTo(1L);
+        }
     }
 
     @Test
@@ -279,28 +269,26 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
         Settings settings = Settings.builder()
             .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true).build();
-        JobsLogService jobsLogService = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        JobsLogs jobsLogs = jobsLogService.get();
+        try (var jobsLogService = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            JobsLogs jobsLogs = jobsLogService.get();
 
-        Classification classification =
-            new Classification(SELECT, Collections.singleton("Collect"));
+            Classification classification =
+                new Classification(SELECT, Collections.singleton("Collect"));
 
-        CountDownLatch latch = new CountDownLatch(2);
-        AtomicBoolean doInsertJobs = new AtomicBoolean(true);
-        AtomicInteger numJobs = new AtomicInteger();
-        int maxQueueSize = JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY);
+            CountDownLatch latch = new CountDownLatch(2);
+            AtomicBoolean doInsertJobs = new AtomicBoolean(true);
+            AtomicInteger numJobs = new AtomicInteger();
+            int maxQueueSize = JobsLogService.STATS_JOBS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY);
 
-        try {
             executor.submit(() -> {
                 while (doInsertJobs.get() && numJobs.get() < maxQueueSize) {
                     UUID uuid = UUID.randomUUID();
                     int i = numJobs.getAndIncrement();
-                    jobsLogs.logExecutionStart(uuid, "select 1", User.CRATE_USER, classification);
+                    jobsLogs.logExecutionStart(uuid, "select 1", Role.CRATE_USER, classification);
                     if (i % 2 == 0) {
                         jobsLogs.logExecutionEnd(uuid, null);
                     } else {
-                        jobsLogs.logPreExecutionFailure(uuid, "select 1", "failure", User.CRATE_USER);
+                        jobsLogs.logPreExecutionFailure(uuid, "select 1", "failure", Role.CRATE_USER);
                     }
                 }
                 latch.countDown();
@@ -313,8 +301,7 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
             latch.await(10, TimeUnit.SECONDS);
             assertThat(
-                StreamSupport.stream(jobsLogs.jobsLog().spliterator(), false).count(),
-                is((long) numJobs.get()));
+                StreamSupport.stream(jobsLogs.jobsLog().spliterator(), false).count()).isEqualTo((long) numJobs.get());
         } finally {
             executor.shutdown();
             executor.awaitTermination(2, TimeUnit.SECONDS);
@@ -327,16 +314,14 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
         Settings settings = Settings.builder()
             .put(JobsLogService.STATS_ENABLED_SETTING.getKey(), true).build();
-        JobsLogService jobsLogService = new JobsLogService(
-            settings, clusterService::localNode, clusterSettings, nodeCtx, scheduler, breakerService);
-        JobsLogs jobsLogs = jobsLogService.get();
+        try (var jobsLogService = new JobsLogService(settings, clusterService, nodeCtx, breakerService)) {
+            JobsLogs jobsLogs = jobsLogService.get();
 
-        CountDownLatch latch = new CountDownLatch(2);
-        AtomicBoolean doInsertJobs = new AtomicBoolean(true);
-        AtomicInteger numJobs = new AtomicInteger();
-        int maxQueueSize = JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY);
+            CountDownLatch latch = new CountDownLatch(2);
+            AtomicBoolean doInsertJobs = new AtomicBoolean(true);
+            AtomicInteger numJobs = new AtomicInteger();
+            int maxQueueSize = JobsLogService.STATS_OPERATIONS_LOG_SIZE_SETTING.getDefault(Settings.EMPTY);
 
-        try {
             executor.submit(() -> {
                 while (doInsertJobs.get() && numJobs.get() < maxQueueSize) {
                     UUID uuid = UUID.randomUUID();
@@ -354,8 +339,7 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
             latch.await(10, TimeUnit.SECONDS);
             assertThat(
-                StreamSupport.stream(jobsLogs.operationsLog().spliterator(), false).count(),
-                is((long) numJobs.get()));
+                StreamSupport.stream(jobsLogs.operationsLog().spliterator(), false).count()).isEqualTo((long) numJobs.get());
         } finally {
             executor.shutdown();
             executor.awaitTermination(2, TimeUnit.SECONDS);
@@ -365,55 +349,55 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
     @Test
     public void testExecutionStart() {
         JobsLogs jobsLogs = new JobsLogs(() -> true);
-        User user = User.of("arthur");
+        Role user = RolesHelper.userOf("arthur");
 
         Classification classification =
             new Classification(SELECT, Collections.singleton("Collect"));
 
         JobContext jobContext = new JobContext(UUID.randomUUID(), "select 1", 1L, user, classification);
         jobsLogs.logExecutionStart(jobContext.id(), jobContext.stmt(), user, classification);
-        List<JobContext> jobsEntries = StreamSupport.stream(jobsLogs.activeJobs().spliterator(), false)
-            .collect(Collectors.toList());
+        List<JobContext> jobsEntries = StreamSupport.stream(jobsLogs.activeJobs().spliterator(), false).toList();
 
-        assertThat(jobsEntries.size(), is(1));
-        assertThat(jobsEntries.get(0).username(), is(user.name()));
-        assertThat(jobsEntries.get(0).stmt(), is("select 1"));
-        assertThat(jobsEntries.get(0).classification(), is(classification));
+        assertThat(jobsEntries).hasSize(1);
+        JobContext job = jobsEntries.getFirst();
+        assertThat(job.username()).isEqualTo(user.name());
+        assertThat(job.stmt()).isEqualTo("select 1");
+        assertThat(job.classification()).isEqualTo(classification);
     }
 
     @Test
     public void testExecutionFailure() {
         JobsLogs jobsLogs = new JobsLogs(() -> true);
-        User user = User.of("arthur");
+        Role user = RolesHelper.userOf("arthur");
         Queue<JobContextLog> q = new BlockingEvictingQueue<>(1);
 
         jobsLogs.updateJobsLog(new QueueSink<>(q, () -> {}));
         jobsLogs.logPreExecutionFailure(UUID.randomUUID(), "select foo", "stmt error", user);
 
-        List<JobContextLog> jobsLogEntries = StreamSupport.stream(jobsLogs.jobsLog().spliterator(), false)
-            .collect(Collectors.toList());
-        assertThat(jobsLogEntries.size(), is(1));
-        assertThat(jobsLogEntries.get(0).username(), is(user.name()));
-        assertThat(jobsLogEntries.get(0).statement(), is("select foo"));
-        assertThat(jobsLogEntries.get(0).errorMessage(), is("stmt error"));
-        assertThat(jobsLogEntries.get(0).classification(), is(new Classification(UNDEFINED)));
+        List<JobContextLog> jobsLogEntries = StreamSupport.stream(jobsLogs.jobsLog().spliterator(), false).toList();
+        assertThat(jobsLogEntries).hasSize(1);
+        JobContextLog job = jobsLogEntries.getFirst();
+        assertThat(job.username()).isEqualTo(user.name());
+        assertThat(job.statement()).isEqualTo("select foo");
+        assertThat(job.errorMessage()).isEqualTo("stmt error");
+        assertThat(job.classification()).isEqualTo(new Classification(UNDEFINED));
     }
 
     @Test
     public void testExecutionFailureIsRecordedInMetrics() {
         JobsLogs jobsLogs = new JobsLogs(() -> true);
-        User user = User.of("arthur");
+        Role user = RolesHelper.userOf("arthur");
         Queue<JobContextLog> q = new BlockingEvictingQueue<>(1);
 
         jobsLogs.updateJobsLog(new QueueSink<>(q, () -> {}));
         jobsLogs.logPreExecutionFailure(UUID.randomUUID(), "select foo", "stmt error", user);
 
-        List<MetricsView> metrics = StreamSupport.stream(jobsLogs.metrics().spliterator(), false)
-            .collect(Collectors.toList());
-        assertThat(metrics.size(), is(1));
-        assertThat(metrics.get(0).failedCount(), is(1L));
-        assertThat(metrics.get(0).totalCount(), is(1L));
-        assertThat(metrics.get(0).classification(), is(new Classification(UNDEFINED)));
+        List<MetricsView> metrics = StreamSupport.stream(jobsLogs.metrics().spliterator(), false).toList();
+        assertThat(metrics).hasSize(1);
+        MetricsView job = metrics.getFirst();
+        assertThat(job.failedCount()).isEqualTo(1L);
+        assertThat(job.totalCount()).isEqualTo(1L);
+        assertThat(job.classification()).isEqualTo(new Classification(UNDEFINED));
     }
 
     @Test
@@ -430,23 +414,23 @@ public class JobsLogsTest extends CrateDummyClusterServiceUnitTest {
 
         jobsLogs.operationFinished(ctxB.id, ctxB.jobId, null);
         List<OperationContextLog> entries = StreamSupport.stream(jobsLogs.operationsLog().spliterator(), false)
-            .collect(Collectors.toList());
+            .toList();
 
-        assertThat(entries, contains(new OperationContextLog(ctxB, null)));
-        assertFalse(entries.contains(new OperationContextLog(ctxA, null)));
+        assertThat(entries)
+            .containsExactly(new OperationContextLog(ctxB, null))
+            .doesNotContain(new OperationContextLog(ctxA, null));
 
         jobsLogs.operationFinished(ctxA.id, ctxA.jobId, null);
-        entries = StreamSupport.stream(jobsLogs.operationsLog().spliterator(), false)
-            .collect(Collectors.toList());
-        assertTrue(entries.contains(new OperationContextLog(ctxA, null)));
+        entries = StreamSupport.stream(jobsLogs.operationsLog().spliterator(), false).toList();
+        assertThat(entries).contains(new OperationContextLog(ctxA, null));
     }
 
     @Test
     public void testLowerBoundScheduler() {
-        assertThat(JobsLogService.clearInterval(TimeValue.timeValueMillis(1L)), is(1000L));
-        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(8L)), is(1000L));
-        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(10L)), is(1000L));
-        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(20L)), is(2000L));
-        assertThat(JobsLogService.clearInterval(TimeValue.timeValueHours(720L)), is(86_400_000L));  // 30 days
+        assertThat(JobsLogService.clearInterval(TimeValue.timeValueMillis(1L))).isEqualTo(1000L);
+        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(8L))).isEqualTo(1000L);
+        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(10L))).isEqualTo(1000L);
+        assertThat(JobsLogService.clearInterval(TimeValue.timeValueSeconds(20L))).isEqualTo(2000L);
+        assertThat(JobsLogService.clearInterval(TimeValue.timeValueHours(720L))).isEqualTo(86_400_000L);  // 30 days
     }
 }
