@@ -28,11 +28,12 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.function.Function;
+import java.util.function.UnaryOperator;
 
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Test;
+import org.locationtech.spatial4j.shape.Point;
 
 import io.crate.common.collections.Maps;
 import io.crate.metadata.ColumnIdent;
@@ -40,6 +41,7 @@ import io.crate.sql.tree.BitString;
 import io.crate.types.ArrayType;
 import io.crate.types.BitStringType;
 import io.crate.types.DataTypes;
+import io.crate.types.GeoPointType;
 import io.crate.types.ObjectType;
 import io.crate.types.UndefinedType;
 
@@ -47,8 +49,8 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_extract_single_value_from_json_with_multiple_columns() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        var column = new ColumnIdent("_doc", List.of("x"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        var column = ColumnIdent.of("_doc", List.of("x"));
         sourceParser.register(column, DataTypes.INTEGER);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
@@ -61,9 +63,9 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_unnecessary_leafs_of_object_columns_are_not_collected() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        var x = new ColumnIdent("_doc", List.of("obj", "x"));
-        var z = new ColumnIdent("_doc", List.of("obj", "z"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        var x = ColumnIdent.of("_doc", List.of("obj", "x"));
+        var z = ColumnIdent.of("_doc", List.of("obj", "z"));
         sourceParser.register(x, DataTypes.INTEGER);
         sourceParser.register(z, DataTypes.LONG);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
@@ -78,9 +80,9 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_full_object_is_collected_if_full_object_requested() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        var obj = new ColumnIdent("_doc", List.of("obj"));
-        var x = new ColumnIdent("_doc", List.of("obj", "x"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        var obj = ColumnIdent.of("_doc", List.of("obj"));
+        var x = ColumnIdent.of("_doc", List.of("obj", "x"));
         // the order in which the columns are registered must not matter
         boolean xFirst = randomBoolean();
         if (xFirst) {
@@ -101,15 +103,15 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_string_encoded_numbers_will_be_parsed_by_data_type() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("i")), DataTypes.INTEGER);
-        sourceParser.register(new ColumnIdent("_doc", List.of("l")), DataTypes.LONG);
-        sourceParser.register(new ColumnIdent("_doc", List.of("f")), DataTypes.FLOAT);
-        sourceParser.register(new ColumnIdent("_doc", List.of("d")), DataTypes.DOUBLE);
-        sourceParser.register(new ColumnIdent("_doc", List.of("s")), DataTypes.SHORT);
-        sourceParser.register(new ColumnIdent("_doc", List.of("b")), DataTypes.BYTE);
-        sourceParser.register(new ColumnIdent("_doc", List.of("ts")), DataTypes.TIMESTAMP);
-        sourceParser.register(new ColumnIdent("_doc", List.of("tsz")), DataTypes.TIMESTAMPZ);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        sourceParser.register(ColumnIdent.of("_doc", List.of("i")), DataTypes.INTEGER);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("l")), DataTypes.LONG);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("f")), DataTypes.FLOAT);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("d")), DataTypes.DOUBLE);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("s")), DataTypes.SHORT);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("b")), DataTypes.BYTE);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("ts")), DataTypes.TIMESTAMP);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("tsz")), DataTypes.TIMESTAMPZ);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {"i": "1", "l": "2", "f": "0.12", "d": "0.23", "s": "4", "b": "5", "ts": "915757200000", "tsz": "915757200000"}
@@ -127,8 +129,8 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_string_encoded_boolean_will_be_parsed_by_data_type() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("b")), DataTypes.BOOLEAN);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        sourceParser.register(ColumnIdent.of("_doc", List.of("b")), DataTypes.BOOLEAN);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
                 {"b": "true"}
@@ -139,12 +141,12 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_uses_inner_type_info_to_parse_objects() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
         BitStringType bitStringType = new BitStringType(4);
         ObjectType objectType = ObjectType.builder()
             .setInnerType("bs", bitStringType)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), objectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), objectType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -162,7 +164,7 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_null_object_sibling_subcolumn_has_same_name() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
         ObjectType innerObjectType = ObjectType.builder()
             .setInnerType("target", DataTypes.FLOAT)
             .build();
@@ -170,7 +172,7 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("inner_object", innerObjectType)
             .setInnerType("target", DataTypes.STRING)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("outer_object")), outerObjectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("outer_object")), outerObjectType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -194,12 +196,12 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_null_object_next_not_sibling_column_has_same_name() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
         ObjectType objectType = ObjectType.builder()
             .setInnerType("target", DataTypes.FLOAT)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("obj")), objectType);
-        sourceParser.register(new ColumnIdent("_doc", List.of("target")), DataTypes.STRING);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("obj")), objectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("target")), DataTypes.STRING);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -220,7 +222,7 @@ public class SourceParserTest extends ESTestCase {
     // tracks a bug: https://github.com/crate/crate/issues/13504
     @Test
     public void test_nested_array_access() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
         // ex:
         //   CREATE TABLE test (
         //   "a" array(object as (
@@ -229,7 +231,7 @@ public class SourceParserTest extends ESTestCase {
         //   )))));
         //   SELECT a['b'] from test; -- a['b'] is array(array(object))
         ArrayType<?> type = new ArrayType<>(new ArrayType<>(ObjectType.builder().setInnerType("s", DataTypes.STRING).build()));
-        sourceParser.register(new ColumnIdent("_doc", List.of("a", "b")), type);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("a", "b")), type);
         var result = sourceParser.parse(new BytesArray(
             """
             {
@@ -258,12 +260,26 @@ public class SourceParserTest extends ESTestCase {
         );
     }
 
+    @Test
+    public void test_nested_array_of_geotype() {
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        ArrayType<?> type = new ArrayType<>(new ArrayType<>(GeoPointType.INSTANCE));
+        sourceParser.register(ColumnIdent.of("_doc", List.of("a")), type);
+        var result = sourceParser.parse(new BytesArray("""
+            { "a" : [ [ [1, 2], [1, 2], [3, 4] ], [ [5, 6], [7, 8] ] ] }
+            """));
+        assertThat(result.get("a")).isInstanceOf(List.class);
+        List<?> first = (List<?>) ((List<?>)result.get("a")).getFirst();
+        assertThat(first.getFirst()).isInstanceOf(Point.class);
+
+    }
+
     // https://github.com/crate/crate/issues/13990
     @Test
     public void test_convert_empty_or_null_arrays_added_dynamically_to_nulls() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
         var type = ObjectType.UNTYPED;
-        sourceParser.register(new ColumnIdent("_doc", List.of("x")), type);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("x")), type);
         var result = sourceParser.parse(
             new BytesArray(
                 """
@@ -280,8 +296,8 @@ public class SourceParserTest extends ESTestCase {
     // https://github.com/crate/crate/issues/14451
     @Test
     public void test_nested_arrays_from_ignored_objects() {
-        SourceParser sourceParser = new SourceParser(Set.of(), Function.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("obj", "x")), UndefinedType.INSTANCE);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        sourceParser.register(ColumnIdent.of("_doc", List.of("obj", "x")), UndefinedType.INSTANCE);
         var result = sourceParser.parse(
             new BytesArray(
                 """
@@ -299,10 +315,10 @@ public class SourceParserTest extends ESTestCase {
     public void test_dropped_leaf_sub_column() {
         SourceParser sourceParser = new SourceParser(
             Set.of(
-                createReference(new ColumnIdent("o", List.of("oo", "b")), DataTypes.INTEGER),
-                createReference(new ColumnIdent("o", List.of("oo", "s")), DataTypes.INTEGER)
+                createReference(ColumnIdent.of("o", List.of("oo", "b")), DataTypes.INTEGER),
+                createReference(ColumnIdent.of("o", List.of("oo", "s")), DataTypes.INTEGER)
             ),
-            Function.identity()
+            UnaryOperator.identity()
         );
         var ooType = new ObjectType.Builder()
             .setInnerType("a", DataTypes.INTEGER)
@@ -318,7 +334,7 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("t", DataTypes.INTEGER)
             .build();
 
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
                 {"o": {"a":1, "b":2, "oo":{"a": 11, "b":22, "c":33, "s":33, "t":44}, "s":3, "t":4}}
@@ -335,11 +351,7 @@ public class SourceParserTest extends ESTestCase {
     }
 
     @Test
-    public void test_drop_sub_column_with_children() {
-        SourceParser sourceParser = new SourceParser(
-                Set.of(createReference(new ColumnIdent("o", List.of("oo")), DataTypes.INTEGER)),
-                Function.identity()
-        );
+    public void test_drop_sub_column_with_children_collect_parent_column() {
         var ooType = new ObjectType.Builder()
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
@@ -350,26 +362,50 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("b", DataTypes.INTEGER)
             .build();
 
-
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        SourceParser sourceParser = new SourceParser(
+                Set.of(createReference(ColumnIdent.of("o", List.of("oo")), ooType)),
+                UnaryOperator.identity()
+        );
+        // Register parent column in order to collect ony this one, ignoring any other column
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
-                {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}}
+                {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}, "x": 4}
             """));
 
         assertThat(Maps.getByPath(result, "o.a")).isEqualTo(1);
         assertThat(Maps.getByPath(result, "o.b")).isEqualTo(2);
         assertThat(Maps.getByPath(result, "o.oo")).isNull();
+        assertThat(Maps.getByPath(result, "x")).isNull();
+    }
+
+    @Test
+    public void test_drop_sub_column_with_children_collect_all() {
+        SourceParser sourceParser = new SourceParser(
+                Set.of(createReference(ColumnIdent.of("o", List.of("oo")), DataTypes.UNTYPED_OBJECT)),
+                UnaryOperator.identity()
+        );
+
+        // We don't register any column to the SourceParser in order to parse the complete document
+        Map<String, Object> result = sourceParser.parse(new BytesArray(
+            """
+                {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}, "x": 4}
+            """));
+
+        assertThat(Maps.getByPath(result, "o.a")).isEqualTo(1);
+        assertThat(Maps.getByPath(result, "o.b")).isEqualTo(2);
+        assertThat(Maps.getByPath(result, "o.oo")).isNull();
+        assertThat(Maps.getByPath(result, "x")).isEqualTo(4);
     }
 
     @Test
     public void test_alter_table_drop_leaf_subcolumn_with_parent_object_array() {
         SourceParser sourceParser = new SourceParser(
             Set.of(
-                createReference(new ColumnIdent("o", List.of("oo", "b")), DataTypes.INTEGER),
-                createReference(new ColumnIdent("o", List.of("oo", "t")), DataTypes.INTEGER)
+                createReference(ColumnIdent.of("o", List.of("oo", "b")), DataTypes.INTEGER),
+                createReference(ColumnIdent.of("o", List.of("oo", "t")), DataTypes.INTEGER)
             ),
-            Function.identity()
+            UnaryOperator.identity()
         );
         var ooType = new ObjectType.Builder()
             .setInnerType("a", DataTypes.INTEGER)
@@ -385,10 +421,26 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("t", DataTypes.INTEGER)
             .build();
 
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
-                {"o": {"a":1, "b":2, "oo":[{"a": 11, "b":22, "c":33, "s":33, "t":44}], "s":3, "t":4}}
+            {
+              "o": {
+                "a": 1,
+                "b": 2,
+                "oo": [
+                  {
+                    "a": 11,
+                    "b": 22,
+                    "c": 33,
+                    "s": 33,
+                    "t": 44
+                  }
+                ],
+                "s": 3,
+                "t": 4
+              }
+            }
             """));
 
         assertThat(Maps.getByPath(result, "o.a")).isEqualTo(1);
@@ -396,9 +448,67 @@ public class SourceParserTest extends ESTestCase {
         assertThat(Maps.getByPath(result, "o.s")).isEqualTo(3);
         assertThat(Maps.getByPath(result, "o.t")).isEqualTo(4);
         //noinspection unchecked
-        Map<String, Object> innerObj = (Map<String, Object>) ((List<?>) Maps.getByPath(result, "o.oo")).get(0);
+        Map<String, Object> innerObj = (Map<String, Object>) ((List<?>) Maps.getByPath(result, "o.oo")).getFirst();
         assertThat(innerObj).containsExactly(
             Map.entry("a", 11),
             Map.entry("s", 33));
+    }
+
+    @Test
+    public void test_nested_dropped_columns_are_not_collected() {
+        var ooType = new ObjectType.Builder()
+                .setInnerType("a", DataTypes.INTEGER)
+                .setInnerType("b", DataTypes.INTEGER)
+                .build();
+        var oType = new ObjectType.Builder()
+                .setInnerType("oo", ooType)
+                .setInnerType("a", DataTypes.INTEGER)
+                .setInnerType("b", DataTypes.INTEGER)
+                .build();
+
+        SourceParser sourceParser = new SourceParser(
+                Set.of(createReference(ColumnIdent.of("o", List.of("oo")), ooType)),
+                UnaryOperator.identity()
+        );
+
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
+        Map<String, Object> result = sourceParser.parse(new BytesArray(
+                """
+                    {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}}
+                """));
+
+        assertThat(Maps.getByPath(result, "o.a")).isEqualTo(1);
+        assertThat(Maps.getByPath(result, "o.b")).isEqualTo(2);
+        assertThat(Maps.getByPath(result, "o.oo")).isNull();
+
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    public void test_parse_long_from_object_array() throws Exception {
+        SourceParser sourceParser = new SourceParser(
+            Set.of(),
+            UnaryOperator.identity()
+        );
+
+        var objType = new ObjectType.Builder()
+            .setInnerType("x", DataTypes.LONG)
+            .build();
+        var objArray = new ArrayType<>(objType);
+        sourceParser.register(ColumnIdent.of("_doc", "os"), objArray);
+        Map<String, Object> result = sourceParser.parse(new BytesArray(
+            """
+            {
+                "os": [
+                    {"x": 10},
+                    {"x": 20}
+                ]
+            }
+            """
+        ));
+        assertThat((List<Map<String, Object>>) result.get("os")).containsExactly(
+            Map.of("x", 10L),
+            Map.of("x", 20L)
+        );
     }
 }
