@@ -21,11 +21,8 @@
 
 package io.crate.integrationtests.disruption.seqno;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.greaterThan;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.fail;
 
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -45,12 +42,10 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.UnaryOperator;
 import java.util.stream.IntStream;
 
 import org.apache.logging.log4j.message.ParameterizedMessage;
-import org.elasticsearch.ExceptionsHelper;
 import org.elasticsearch.cluster.coordination.LinearizabilityChecker;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
@@ -70,6 +65,7 @@ import org.elasticsearch.threadpool.ThreadPool;
 import org.junit.Test;
 
 import io.crate.common.SuppressForbidden;
+import io.crate.common.exceptions.Exceptions;
 import io.crate.common.unit.TimeValue;
 import io.crate.integrationtests.disruption.discovery.AbstractDisruptionTestCase;
 import io.crate.testing.SQLResponse;
@@ -174,7 +170,7 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
                     Version version = new Version(primaryTerm, seqNo);
                     return new Partition(id, version);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         int threadCount = randomIntBetween(3, 20);
         CyclicBarrier roundBarrier = new CyclicBarrier(threadCount + 1); // +1 for main thread.
@@ -182,7 +178,7 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         List<CASUpdateThread> threads =
             IntStream.range(0, threadCount)
                 .mapToObj(i -> new CASUpdateThread(i, roundBarrier, partitions, disruptTimeSeconds + 1))
-                .collect(Collectors.toList());
+                .toList();
 
         logger.info("--> Starting {} threads", threadCount);
         threads.forEach(Thread::start);
@@ -209,7 +205,7 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         } catch (InterruptedException | BrokenBarrierException | TimeoutException e) {
             logger.error("Timed out, dumping stack traces of all threads:");
             threads.forEach(
-                thread -> logger.info(thread.toString() + ":\n" + ExceptionsHelper.formatStackTrace(thread.getStackTrace())));
+                thread -> logger.info("{}:%n{}", thread, Exceptions.formatStackTrace(thread.getStackTrace())));
             throw new RuntimeException(e);
         } finally {
             logger.info("--> terminating test");
@@ -290,8 +286,8 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
                                 historyResponse.accept(historyOutput);
                                 // validate version and seqNo strictly increasing for successful CAS to avoid that overhead during
                                 // linearizability checking.
-                                assertThat(historyOutput.outputVersion, greaterThan(version));
-                                assertThat(historyOutput.outputVersion.seqNo, greaterThan(version.seqNo));
+                                assertThat(historyOutput.outputVersion).isGreaterThan(version);
+                                assertThat(historyOutput.outputVersion.seqNo).isGreaterThan(version.seqNo);
                             } else {
                                 // if we supplied an input version <= latest successful version, we can safely assume that any failed
                                 // operation will no longer be able to complete after the next successful write and we can therefore terminate
@@ -506,7 +502,7 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
                                  id, spec, initialVersion, serializedHistory);
                 }
             }
-            assertTrue("Must be linearizable", linearizable);
+            assertThat(linearizable).as("Must be linearizable").isTrue();
         }
     }
 
@@ -689,7 +685,7 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         }
     }
 
-    private static Function<Object, Object> missingResponseGenerator() {
+    private static UnaryOperator<Object> missingResponseGenerator() {
         return input -> new FailureHistoryOutput();
     }
 
@@ -775,27 +771,20 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
 
         LinearizabilityChecker.SequentialSpec spec = new CASSequentialSpec(version1);
 
-        assertThat(spec.initialState(), equalTo(casSuccess(version1)));
+        assertThat(spec.initialState()).isEqualTo(casSuccess(version1));
 
-        assertThat(spec.nextState(casSuccess(version1), version1, new IndexResponseHistoryOutput(version2)),
-                   equalTo(Optional.of(casSuccess(version2))));
-        assertThat(spec.nextState(casFail(version1), version2, new IndexResponseHistoryOutput(version3)),
-                   equalTo(Optional.of(casSuccess(version3))));
-        assertThat(spec.nextState(casSuccess(version1), version2, new IndexResponseHistoryOutput(version3)),
-                   equalTo(Optional.empty()));
-        assertThat(spec.nextState(casSuccess(version2), version1, new IndexResponseHistoryOutput(version3)),
-                   equalTo(Optional.empty()));
-        assertThat(spec.nextState(casFail(version2), version1, new IndexResponseHistoryOutput(version3)),
-                   equalTo(Optional.empty()));
+        assertThat(spec.nextState(casSuccess(version1), version1, new IndexResponseHistoryOutput(version2))).isEqualTo(Optional.of(casSuccess(version2)));
+        assertThat(spec.nextState(casFail(version1), version2, new IndexResponseHistoryOutput(version3))).isEqualTo(Optional.of(casSuccess(version3)));
+        assertThat(spec.nextState(casSuccess(version1), version2, new IndexResponseHistoryOutput(version3))).isEqualTo(Optional.empty());
+        assertThat(spec.nextState(casSuccess(version2), version1, new IndexResponseHistoryOutput(version3))).isEqualTo(Optional.empty());
+        assertThat(spec.nextState(casFail(version2), version1, new IndexResponseHistoryOutput(version3))).isEqualTo(Optional.empty());
 
         // for version conflicts, we keep state version with lastFailed set, regardless of input/output version.
         versions.forEach(stateVersion ->
                              versions.forEach(inputVersion ->
                                                   versions.forEach(outputVersion -> {
-                                                      assertThat(spec.nextState(casSuccess(stateVersion), inputVersion, new CASFailureHistoryOutput(outputVersion)),
-                                                                 equalTo(Optional.of(casFail(stateVersion))));
-                                                      assertThat(spec.nextState(casFail(stateVersion), inputVersion, new CASFailureHistoryOutput(outputVersion)),
-                                                                 equalTo(Optional.of(casFail(stateVersion))));
+                                                      assertThat(spec.nextState(casSuccess(stateVersion), inputVersion, new CASFailureHistoryOutput(outputVersion))).isEqualTo(Optional.of(casFail(stateVersion)));
+                                                      assertThat(spec.nextState(casFail(stateVersion), inputVersion, new CASFailureHistoryOutput(outputVersion))).isEqualTo(Optional.of(casFail(stateVersion)));
                                                   })
                              )
         );
@@ -803,10 +792,8 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         // for non version conflict failures, we keep state version with lastFailed set, regardless of input version.
         versions.forEach(stateVersion ->
                              versions.forEach(inputVersion -> {
-                                 assertThat(spec.nextState(casSuccess(stateVersion), inputVersion, new FailureHistoryOutput()),
-                                            equalTo(Optional.of(casFail(stateVersion))));
-                                 assertThat(spec.nextState(casFail(stateVersion), inputVersion, new FailureHistoryOutput()),
-                                            equalTo(Optional.of(casFail(stateVersion))));
+                                 assertThat(spec.nextState(casSuccess(stateVersion), inputVersion, new FailureHistoryOutput())).isEqualTo(Optional.of(casFail(stateVersion)));
+                                 assertThat(spec.nextState(casFail(stateVersion), inputVersion, new FailureHistoryOutput())).isEqualTo(Optional.of(casFail(stateVersion)));
                              })
         );
     }
