@@ -21,20 +21,14 @@
 
 package io.crate.planner;
 
+import static io.crate.testing.Asserts.assertThat;
 import static io.crate.testing.Asserts.isReference;
 import static java.util.Collections.singletonList;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.collection.IsIterableContainingInOrder.contains;
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertThat;
 
 import java.io.IOException;
 import java.util.List;
 
-import org.elasticsearch.common.Randomness;
-import org.hamcrest.Matchers;
+import org.assertj.core.api.Assertions;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -47,10 +41,10 @@ import io.crate.execution.dsl.projection.EvalProjection;
 import io.crate.execution.dsl.projection.FetchProjection;
 import io.crate.execution.dsl.projection.FilterProjection;
 import io.crate.execution.dsl.projection.GroupProjection;
+import io.crate.execution.dsl.projection.LimitAndOffsetProjection;
 import io.crate.execution.dsl.projection.MergeCountProjection;
 import io.crate.execution.dsl.projection.OrderedLimitAndOffsetProjection;
 import io.crate.execution.dsl.projection.Projection;
-import io.crate.execution.dsl.projection.LimitAndOffsetProjection;
 import io.crate.expression.scalar.cast.ImplicitCastFunction;
 import io.crate.expression.symbol.InputColumn;
 import io.crate.expression.symbol.Symbol;
@@ -67,7 +61,6 @@ import io.crate.planner.node.dql.join.Join;
 import io.crate.planner.operators.InsertFromValues;
 import io.crate.sql.tree.ColumnPolicy;
 import io.crate.test.integration.CrateDummyClusterServiceUnitTest;
-import io.crate.testing.Asserts;
 import io.crate.testing.SQLExecutor;
 import io.crate.types.DataTypes;
 
@@ -77,7 +70,9 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
 
     @Before
     public void prepare() throws IOException {
-        e = SQLExecutor.builder(clusterService, 2, Randomness.get(), List.of())
+        e = SQLExecutor.builder(clusterService)
+            .setNumNodes(2)
+            .build()
             .addPartitionedTable(
                 "create table parted_pks (" +
                 "   id int," +
@@ -97,30 +92,33 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
                 "   date timestamp with time zone" +
                 ") clustered into 4 shards")
             .addTable("create table source (id int primary key, name string)")
-            .addPartitionedTable("CREATE TABLE double_parted(x int, y int) PARTITIONED BY (x, y)")
-            .build();
+            .addPartitionedTable("CREATE TABLE double_parted(x int, y int) PARTITIONED BY (x, y)");
     }
 
     @Test
     public void testInsertFromSubQueryNonDistributedGroupBy() {
         Collect nonDistributedGroupBy = e.plan(
             "insert into users (id, name) (select count(*), name from sys.nodes group by name)");
-        assertThat("nodeIds size must 1 one if there is no mergePhase", nonDistributedGroupBy.nodeIds().size(), is(1));
-        assertThat(nonDistributedGroupBy.collectPhase().projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(nonDistributedGroupBy.nodeIds())
+            .as("nodeIds size must 1 one if there is no mergePhase")
+            .hasSize(1);
+        assertThat(nonDistributedGroupBy.collectPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
     }
 
     @Test
     public void testInsertFromSubQueryNonDistributedGroupByWithCast() {
         Collect nonDistributedGroupBy = e.plan(
             "insert into users (id, name) (select name, count(*) from sys.nodes group by name)");
-        assertThat("nodeIds size must 1 one if there is no mergePhase", nonDistributedGroupBy.nodeIds().size(), is(1));
-        assertThat(nonDistributedGroupBy.collectPhase().projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(nonDistributedGroupBy.nodeIds())
+            .as("nodeIds size must 1 one if there is no mergePhase")
+            .hasSize(1);
+        assertThat(nonDistributedGroupBy.collectPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
     }
 
     @Test
@@ -130,25 +128,17 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
 
         Merge distMerge = (Merge) localMerge.subPlan();
         Collect collect = (Collect) distMerge.subPlan();
-        assertThat(
-            collect.collectPhase().projections(),
-            contains(instanceOf(GroupProjection.class))
-        );
-        assertThat(
-            distMerge.mergePhase().projections(),
-            contains(
-                instanceOf(GroupProjection.class),
-                instanceOf(OrderedLimitAndOffsetProjection.class),
-                instanceOf(EvalProjection.class)
-            )
-        );
-        assertThat(
-            localMerge.mergePhase().projections(),
-            contains(
-                instanceOf(LimitAndOffsetProjection.class),
-                instanceOf(ColumnIndexWriterProjection.class)
-            )
-        );
+        Assertions.assertThat(collect.collectPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class));
+
+        Assertions.assertThat(distMerge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(OrderedLimitAndOffsetProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class));
+
+        Assertions.assertThat(localMerge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(LimitAndOffsetProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
     }
 
     @Test
@@ -157,27 +147,27 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
             "insert into users (id, name) (select name, count(*) from users group by name)");
         Merge groupBy = (Merge) planNode.subPlan();
         MergePhase mergePhase = groupBy.mergePhase();
-        assertThat(mergePhase.projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(mergePhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
 
         ColumnIndexWriterProjection projection = (ColumnIndexWriterProjection) mergePhase.projections().get(2);
-        assertThat(projection.primaryKeys().size(), is(1));
-        assertThat(projection.primaryKeys().get(0).fqn(), is("id"));
-        assertThat(projection.allTargetColumns().size(), is(2));
-        assertThat(projection.allTargetColumns().get(0).column().fqn(), is("id"));
-        assertThat(projection.allTargetColumns().get(1).column().fqn(), is("name"));
+        assertThat(projection.primaryKeys()).hasSize(1);
+        assertThat(projection.primaryKeys().getFirst().fqn()).isEqualTo("id");
+        assertThat(projection.allTargetColumns()).hasSize(2);
+        assertThat(projection.allTargetColumns().get(0).column().fqn()).isEqualTo("id");
+        assertThat(projection.allTargetColumns().get(1).column().fqn()).isEqualTo("name");
 
-        assertNotNull(projection.clusteredByIdent());
-        assertThat(projection.clusteredByIdent().fqn(), is("id"));
-        assertThat(projection.tableIdent().fqn(), is("doc.users"));
-        assertThat(projection.partitionedBySymbols().isEmpty(), is(true));
+        assertThat(projection.clusteredByIdent()).isNotNull();
+        assertThat(projection.clusteredByIdent().fqn()).isEqualTo("id");
+        assertThat(projection.tableIdent().fqn()).isEqualTo("doc.users");
+        assertThat(projection.partitionedBySymbols().isEmpty()).isTrue();
 
         MergePhase localMergeNode = planNode.mergePhase();
-        assertThat(localMergeNode.projections().size(), is(1));
-        assertThat(localMergeNode.projections().get(0), instanceOf(MergeCountProjection.class));
-        assertThat(localMergeNode.finalProjection().get().outputs().size(), is(1));
+        assertThat(localMergeNode.projections()).hasSize(1);
+        assertThat(localMergeNode.projections().getFirst()).isExactlyInstanceOf(MergeCountProjection.class);
+        assertThat(localMergeNode.finalProjection().get().outputs()).hasSize(1);
     }
 
     @Test
@@ -186,30 +176,30 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
             "insert into parted_pks (id, date) (select id, date from users group by id, date)");
         Merge groupBy = (Merge) planNode.subPlan();
         MergePhase mergePhase = groupBy.mergePhase();
-        assertThat(mergePhase.projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(mergePhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
         ColumnIndexWriterProjection projection = (ColumnIndexWriterProjection) mergePhase.projections().get(2);
-        assertThat(projection.primaryKeys().size(), is(2));
-        assertThat(projection.primaryKeys().get(0).fqn(), is("id"));
-        assertThat(projection.primaryKeys().get(1).fqn(), is("date"));
+        assertThat(projection.primaryKeys()).hasSize(2);
+        assertThat(projection.primaryKeys().get(0).fqn()).isEqualTo("id");
+        assertThat(projection.primaryKeys().get(1).fqn()).isEqualTo("date");
 
-        assertThat(projection.allTargetColumns().size(), is(2));
-        assertThat(projection.allTargetColumns().get(0).column().fqn(), is("id"));
+        assertThat(projection.allTargetColumns()).hasSize(2);
+        assertThat(projection.allTargetColumns().getFirst().column().fqn()).isEqualTo("id");
 
-        assertThat(projection.partitionedBySymbols().size(), is(1));
-        assertThat(((InputColumn) projection.partitionedBySymbols().get(0)).index(), is(1));
+        assertThat(projection.partitionedBySymbols()).hasSize(1);
+        assertThat(((InputColumn) projection.partitionedBySymbols().getFirst()).index()).isEqualTo(1);
 
-        assertNotNull(projection.clusteredByIdent());
-        assertThat(projection.clusteredByIdent().fqn(), is("id"));
-        assertThat(projection.tableIdent().fqn(), is("doc.parted_pks"));
+        assertThat(projection.clusteredByIdent()).isNotNull();
+        assertThat(projection.clusteredByIdent().fqn()).isEqualTo("id");
+        assertThat(projection.tableIdent().fqn()).isEqualTo("doc.parted_pks");
 
         MergePhase localMergeNode = planNode.mergePhase();
 
-        assertThat(localMergeNode.projections().size(), is(1));
-        assertThat(localMergeNode.projections().get(0), instanceOf(MergeCountProjection.class));
-        assertThat(localMergeNode.finalProjection().get().outputs().size(), is(1));
+        assertThat(localMergeNode.projections()).hasSize(1);
+        assertThat(localMergeNode.projections().getFirst()).isExactlyInstanceOf(MergeCountProjection.class);
+        assertThat(localMergeNode.finalProjection().get().outputs()).hasSize(1);
 
     }
 
@@ -218,21 +208,21 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge globalAggregate = e.plan(
             "insert into users (name, id) (select arbitrary(name), count(*) from users)");
         MergePhase mergePhase = globalAggregate.mergePhase();
-        assertThat(mergePhase.projections(), contains(
-            instanceOf(AggregationProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)
-        ));
-        assertThat(mergePhase.projections().get(1), instanceOf(ColumnIndexWriterProjection.class));
+        assertThat(mergePhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(AggregationProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class)
+        );
+        assertThat(mergePhase.projections().get(1)).isExactlyInstanceOf(ColumnIndexWriterProjection.class);
         ColumnIndexWriterProjection projection = (ColumnIndexWriterProjection) mergePhase.projections().get(1);
 
-        assertThat(projection.allTargetColumns().size(), is(2));
-        assertThat(projection.allTargetColumns().get(0).column().fqn(), is("name"));
-        assertThat(projection.allTargetColumns().get(1).column().fqn(), is("id"));
+        assertThat(projection.allTargetColumns()).hasSize(2);
+        assertThat(projection.allTargetColumns().get(0).column().fqn()).isEqualTo("name");
+        assertThat(projection.allTargetColumns().get(1).column().fqn()).isEqualTo("id");
 
-        assertNotNull(projection.clusteredByIdent());
-        assertThat(projection.clusteredByIdent().fqn(), is("id"));
-        assertThat(projection.tableIdent().fqn(), is("doc.users"));
-        assertThat(projection.partitionedBySymbols().isEmpty(), is(true));
+        assertThat(projection.clusteredByIdent()).isNotNull();
+        assertThat(projection.clusteredByIdent().fqn()).isEqualTo("id");
+        assertThat(projection.tableIdent().fqn()).isEqualTo("doc.users");
+        assertThat(projection.partitionedBySymbols().isEmpty()).isTrue();
     }
 
     @Test
@@ -242,36 +232,36 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect queryAndFetch = (Collect) merge.subPlan();
         PKLookupPhase collectPhase = ((PKLookupPhase) queryAndFetch.collectPhase());
 
-        assertThat(collectPhase.projections().size(), is(1));
-        assertThat(collectPhase.projections().get(0), instanceOf(ColumnIndexWriterProjection.class));
+        assertThat(collectPhase.projections()).hasSize(1);
+        assertThat(collectPhase.projections().getFirst()).isExactlyInstanceOf(ColumnIndexWriterProjection.class);
         ColumnIndexWriterProjection projection = (ColumnIndexWriterProjection) collectPhase.projections().get(0);
 
-        assertThat(projection.allTargetColumns().size(), is(3));
-        assertThat(projection.allTargetColumns().get(0).column().fqn(), is("date"));
-        assertThat(projection.allTargetColumns().get(1).column().fqn(), is("id"));
-        assertThat(projection.allTargetColumns().get(2).column().fqn(), is("name"));
-        assertThat(((InputColumn) projection.ids().get(0)).index(), is(1));
-        assertThat(((InputColumn) projection.clusteredBy()).index(), is(1));
-        assertThat(projection.partitionedBySymbols().isEmpty(), is(true));
+        assertThat(projection.allTargetColumns()).hasSize(3);
+        assertThat(projection.allTargetColumns().get(0).column().fqn()).isEqualTo("date");
+        assertThat(projection.allTargetColumns().get(1).column().fqn()).isEqualTo("id");
+        assertThat(projection.allTargetColumns().get(2).column().fqn()).isEqualTo("name");
+        assertThat(((InputColumn) projection.ids().getFirst()).index()).isEqualTo(1);
+        assertThat(((InputColumn) projection.clusteredBy()).index()).isEqualTo(1);
+        assertThat(projection.partitionedBySymbols().isEmpty()).isTrue();
     }
 
     @Test
     public void testInsertFromSubQueryJoin() {
         Join join = e.plan(
             "insert into users (id, name) (select u1.id, u2.name from users u1 CROSS JOIN users u2)");
-        assertThat(join.joinPhase().projections(), contains(
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)
-        ));
+        assertThat(join.joinPhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class)
+        );
 
         ColumnIndexWriterProjection projection = (ColumnIndexWriterProjection) join.joinPhase().projections().get(1);
 
-        assertThat(projection.allTargetColumns().size(), is(2));
-        assertThat(projection.allTargetColumns().get(0).column().fqn(), is("id"));
-        assertThat(projection.allTargetColumns().get(1).column().fqn(), is("name"));
-        assertThat(((InputColumn) projection.ids().get(0)).index(), is(0));
-        assertThat(((InputColumn) projection.clusteredBy()).index(), is(0));
-        assertThat(projection.partitionedBySymbols().isEmpty(), is(true));
+        assertThat(projection.allTargetColumns()).hasSize(2);
+        assertThat(projection.allTargetColumns().get(0).column().fqn()).isEqualTo("id");
+        assertThat(projection.allTargetColumns().get(1).column().fqn()).isEqualTo("name");
+        assertThat(((InputColumn) projection.ids().getFirst()).index()).isEqualTo(0);
+        assertThat(((InputColumn) projection.clusteredBy()).index()).isEqualTo(0);
+        assertThat(projection.partitionedBySymbols().isEmpty()).isTrue();
     }
 
     @Test
@@ -279,15 +269,11 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         QueryThenFetch qtf = e.plan("insert into users (date, id, name) (select date, id, name from users limit 10)");
         Merge merge = (Merge) qtf.subPlan();
         Collect collect = (Collect) merge.subPlan();
-        assertThat(collect.collectPhase().projections(), contains(instanceOf(LimitAndOffsetProjection.class)));
-        assertThat(
-            merge.mergePhase().projections(),
-            contains(
-                instanceOf(LimitAndOffsetProjection.class),
-                instanceOf(FetchProjection.class),
-                instanceOf(ColumnIndexWriterProjection.class)
-            )
-        );
+        assertThat(collect.collectPhase().projections()).satisfiesExactly(p -> assertThat(p).isExactlyInstanceOf(LimitAndOffsetProjection.class));
+        assertThat(merge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(LimitAndOffsetProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(FetchProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
     }
 
     @Test
@@ -296,19 +282,19 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = (Merge) qtf.subPlan();
         // We can ignore the offset since SQL semantics don't promise a deterministic order without explicit order by clause
         Collect collect = (Collect) merge.subPlan();
-        assertThat(collect.collectPhase().projections(), Matchers.empty());
-        assertThat(merge.mergePhase().projections(), contains(
-            instanceOf(FetchProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)
-        ));
+        assertThat(collect.collectPhase().projections()).isEmpty();
+        assertThat(merge.mergePhase().projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(FetchProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class)
+        );
     }
 
     @Test
     public void testInsertFromSubQueryWithOrderBy() {
         Merge merge = e.plan("insert into users (date, id, name) (select date, id, name from users order by id)");
         Collect collect = (Collect) merge.subPlan();
-        assertThat(collect.collectPhase().projections(), contains(instanceOf(ColumnIndexWriterProjection.class)));
-        assertThat(merge.mergePhase().projections(), contains(instanceOf(MergeCountProjection.class)));
+        assertThat(collect.collectPhase().projections()).satisfiesExactly(p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
+        assertThat(merge.mergePhase().projections()).satisfiesExactly(p -> assertThat(p).isExactlyInstanceOf(MergeCountProjection.class));
     }
 
     @Test
@@ -317,13 +303,13 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
             "insert into users (id, name) (select id, name from users)");
         Collect collect = (Collect) planNode.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
-        assertThat(collectPhase.projections().size(), is(1));
-        assertThat(collectPhase.projections().get(0), instanceOf(ColumnIndexWriterProjection.class));
+        assertThat(collectPhase.projections()).hasSize(1);
+        assertThat(collectPhase.projections().getFirst()).isExactlyInstanceOf(ColumnIndexWriterProjection.class);
 
         MergePhase localMergeNode = planNode.mergePhase();
 
-        assertThat(localMergeNode.projections().size(), is(1));
-        assertThat(localMergeNode.projections().get(0), instanceOf(MergeCountProjection.class));
+        assertThat(localMergeNode.projections()).hasSize(1);
+        assertThat(localMergeNode.projections().getFirst()).isExactlyInstanceOf(MergeCountProjection.class);
     }
 
     @Test
@@ -333,17 +319,17 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect collect = (Collect) merge.subPlan();
 
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) collect.collectPhase());
-        assertThat(collectPhase.projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)
-        ));
+        assertThat(collectPhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class)
+        );
         ColumnIndexWriterProjection columnIndexWriterProjection =
             (ColumnIndexWriterProjection) collectPhase.projections().get(1);
-        Asserts.assertThat(columnIndexWriterProjection.allTargetColumns()).satisfiesExactly(
+        assertThat(columnIndexWriterProjection.allTargetColumns()).satisfiesExactly(
             isReference("id"), isReference("name"));
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.projections(), contains(instanceOf(MergeCountProjection.class)));
+        assertThat(mergePhase.projections()).satisfiesExactly(p -> assertThat(p).isExactlyInstanceOf(MergeCountProjection.class));
     }
 
     @Test
@@ -353,24 +339,24 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect nonDistributedGroupBy = (Collect) merge.subPlan();
 
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) nonDistributedGroupBy.collectPhase());
-        assertThat(collectPhase.projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(collectPhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
         EvalProjection projection = (EvalProjection) collectPhase.projections().get(1);
-        Asserts.assertThat(projection.outputs())
+        assertThat(projection.outputs())
             .satisfiesExactly(
-                s -> Asserts.assertThat(s).isInputColumn(0),
-                s -> Asserts.assertThat(s).isFunction(
+                s -> assertThat(s).isInputColumn(0),
+                s -> assertThat(s).isFunction(
                     ImplicitCastFunction.NAME,
                     List.of(DataTypes.LONG, DataTypes.STRING)));
 
         ColumnIndexWriterProjection columnIndexWriterProjection = (ColumnIndexWriterProjection) collectPhase.projections().get(2);
-        Asserts.assertThat(columnIndexWriterProjection.allTargetColumns()).satisfiesExactly(
+        assertThat(columnIndexWriterProjection.allTargetColumns()).satisfiesExactly(
             isReference("id"), isReference("name"));
 
         MergePhase mergePhase = merge.mergePhase();
-        assertThat(mergePhase.projections(), contains(instanceOf(MergeCountProjection.class)));
+        assertThat(mergePhase.projections()).satisfiesExactly(p -> assertThat(p).isExactlyInstanceOf(MergeCountProjection.class));
     }
 
     @Test
@@ -380,9 +366,9 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Collect queryAndFetch = (Collect) planNode.subPlan();
         RoutedCollectPhase collectPhase = ((RoutedCollectPhase) queryAndFetch.collectPhase());
         List<Symbol> toCollect = collectPhase.toCollect();
-        assertThat(toCollect.size(), is(2));
-        Asserts.assertThat(toCollect.get(0)).isReference().hasName("_doc['id']");
-        assertThat(toCollect.get(1), equalTo(new SimpleReference(
+        assertThat(toCollect).hasSize(2);
+        assertThat(toCollect.get(0)).isReference().hasName("_doc['id']");
+        assertThat(toCollect.get(1)).isEqualTo(new SimpleReference(
             new ReferenceIdent(new RelationName(Schemas.DOC_SCHEMA_NAME, "parted_pks"), "date"),
             RowGranularity.PARTITION,
             DataTypes.TIMESTAMPZ,
@@ -393,7 +379,7 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
             3,
             3,
             false,
-            null)));
+            null));
     }
 
     @Test
@@ -402,49 +388,48 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
             "insert into users (id, name) (select name, count(*) from users group by name having count(*) > 3)");
         Merge groupByNode = (Merge) planNode.subPlan();
         MergePhase mergePhase = groupByNode.mergePhase();
-        assertThat(mergePhase.projections(), contains(
-            instanceOf(GroupProjection.class),
-            instanceOf(FilterProjection.class),
-            instanceOf(EvalProjection.class),
-            instanceOf(ColumnIndexWriterProjection.class)));
+        assertThat(mergePhase.projections()).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(FilterProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
 
         FilterProjection filterProjection = (FilterProjection) mergePhase.projections().get(1);
-        assertThat(filterProjection.outputs().size(), is(2));
-        assertThat(filterProjection.outputs().get(0), instanceOf(InputColumn.class));
-        assertThat(filterProjection.outputs().get(1), instanceOf(InputColumn.class));
+        assertThat(filterProjection.outputs()).hasSize(2);
+        assertThat(filterProjection.outputs().get(0)).isExactlyInstanceOf(InputColumn.class);
+        assertThat(filterProjection.outputs().get(1)).isExactlyInstanceOf(InputColumn.class);
 
         InputColumn inputColumn = (InputColumn) filterProjection.outputs().get(0);
-        assertThat(inputColumn.index(), is(0));
+        assertThat(inputColumn.index()).isEqualTo(0);
         inputColumn = (InputColumn) filterProjection.outputs().get(1);
-        assertThat(inputColumn.index(), is(1));
+        assertThat(inputColumn.index()).isEqualTo(1);
         MergePhase localMergeNode = planNode.mergePhase();
 
-        assertThat(localMergeNode.projections().size(), is(1));
-        assertThat(localMergeNode.projections().get(0), instanceOf(MergeCountProjection.class));
-        assertThat(localMergeNode.finalProjection().get().outputs().size(), is(1));
+        assertThat(localMergeNode.projections()).hasSize(1);
+        assertThat(localMergeNode.projections().getFirst()).isExactlyInstanceOf(MergeCountProjection.class);
+        assertThat(localMergeNode.finalProjection().get().outputs()).hasSize(1);
     }
 
     @Test
     public void testProjectionWithCastsIsAddedIfSourceTypeDoNotMatchTargetTypes() {
         Merge plan = e.plan("insert into users (id, name) (select id, name from source)");
         List<Projection> projections = ((Collect) plan.subPlan()).collectPhase().projections();
-        assertThat(projections,
-            contains(
-                instanceOf(EvalProjection.class),
-                instanceOf(ColumnIndexWriterProjection.class))
-        );
-        Asserts.assertThat(projections.get(0).outputs())
+        assertThat(projections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(EvalProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
+
+        assertThat(projections.getFirst().outputs())
             .satisfiesExactly(
-                s -> Asserts.assertThat(s).isFunction(
+                s -> assertThat(s).isFunction(
                     ImplicitCastFunction.NAME,
                     List.of(DataTypes.INTEGER, DataTypes.STRING)),
-                s -> Asserts.assertThat(s).isInputColumn(1));
+                s -> assertThat(s).isInputColumn(1));
     }
 
     @Test
     public void test_insert_from_sub_query_with_sys_tables_has_no_doc_lookup() {
         Collect collect = e.plan("insert into users (id, name) (select oid, typname from pg_catalog.pg_type)");
-        Asserts.assertThat(collect.collectPhase().toCollect()).satisfiesExactly(
+        assertThat(collect.collectPhase().toCollect()).satisfiesExactly(
             isReference("oid"),
             isReference("typname"));
     }
@@ -452,7 +437,7 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
     @Test
     public void test_insert_from_query_rewritten_to_insert_from_values() {
         Plan plan = e.logicalPlan("insert into users (id, name) values (42, 'Deep Thought')");
-        assertThat(plan, instanceOf(InsertFromValues.class));
+        assertThat(plan).isExactlyInstanceOf(InsertFromValues.class);
     }
 
     @Test
@@ -460,26 +445,22 @@ public class InsertPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge merge = e.plan("insert into users (id) (select distinct id from users)");
         Collect collect = (Collect) merge.subPlan();
         List<Projection> projections = collect.collectPhase().projections();
-        assertThat(
-            projections,
-            contains(
-                instanceOf(GroupProjection.class),
-                instanceOf(ColumnIndexWriterProjection.class)
-            )
-        );
-        assertThat(projections.get(0).requiredGranularity(), is(RowGranularity.SHARD));
+        assertThat(projections).satisfiesExactly(
+            p -> assertThat(p).isExactlyInstanceOf(GroupProjection.class),
+            p -> assertThat(p).isExactlyInstanceOf(ColumnIndexWriterProjection.class));
+        assertThat(projections.getFirst().requiredGranularity()).isEqualTo(RowGranularity.SHARD);
     }
 
     @Test
     public void test_insert_from_group_by_uses_doc_values() throws Exception {
         Merge merge = e.plan("insert into users (id) (select id from users group by 1)");
         Collect collect = (Collect) merge.subPlan();
-        Asserts.assertThat(collect.collectPhase().toCollect()).satisfiesExactly(isReference("id"));
+        assertThat(collect.collectPhase().toCollect()).satisfiesExactly(isReference("id"));
     }
 
     @Test
     public void test_insert_into_partitioned_table_with_less_columns_than_the_partition_by_ones() {
         Plan plan = e.logicalPlan("insert into double_parted (x) VALUES (1)");
-        assertThat(plan, instanceOf(InsertFromValues.class));
+        assertThat(plan).isExactlyInstanceOf(InsertFromValues.class);
     }
 }
