@@ -20,15 +20,10 @@
  */
 package org.elasticsearch.common.settings;
 
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.Matchers.hasToString;
-import static org.hamcrest.Matchers.sameInstance;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThat;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
@@ -75,48 +70,49 @@ public class ScopedSettingsTests extends ESTestCase {
         ClusterSettings service = new ClusterSettings(currentSettings
             , new HashSet<>(Arrays.asList(dynamicSetting, staticSetting)));
 
-        expectThrows(IllegalArgumentException.class, () ->
-        service.updateDynamicSettings(Settings.builder().put("some.dyn.setting", 8).putNull("some.static.setting").build(),
-            Settings.builder().put(currentSettings), Settings.builder(), "node"));
+        assertThatThrownBy(() -> service.updateDynamicSettings(
+                Settings.builder().put("some.dyn.setting", 8).putNull("some.static.setting").build(),
+                Settings.builder().put(currentSettings), Settings.builder(), "node")
+        ).isExactlyInstanceOf(IllegalArgumentException.class);
 
         Settings.Builder target = Settings.builder().put(currentSettings);
         Settings.Builder update = Settings.builder();
-        assertTrue(service.updateDynamicSettings(Settings.builder().put("some.dyn.setting", 8).build(),
-            target, update, "node"));
-        assertEquals(8, dynamicSetting.get(target.build()).intValue());
-        assertEquals(6, staticSetting.get(target.build()).intValue());
-        assertEquals(9, target.build().getAsInt("archived.foo.bar", null).intValue());
+        assertThat(service.updateDynamicSettings(Settings.builder().put("some.dyn.setting", 8).build(),
+            target, update, "node")).isTrue();
+        assertThat(dynamicSetting.get(target.build()).intValue()).isEqualTo(8);
+        assertThat(staticSetting.get(target.build()).intValue()).isEqualTo(6);
+        assertThat(target.build().getAsInt("archived.foo.bar", null).intValue()).isEqualTo(9);
 
         target = Settings.builder().put(currentSettings);
         update = Settings.builder();
-        assertTrue(service.updateDynamicSettings(Settings.builder().putNull("some.dyn.setting").build(),
-            target, update, "node"));
-        assertEquals(1, dynamicSetting.get(target.build()).intValue());
-        assertEquals(6, staticSetting.get(target.build()).intValue());
-        assertEquals(9, target.build().getAsInt("archived.foo.bar", null).intValue());
+        assertThat(service.updateDynamicSettings(Settings.builder().putNull("some.dyn.setting").build(),
+            target, update, "node")).isTrue();
+        assertThat(dynamicSetting.get(target.build()).intValue()).isEqualTo(1);
+        assertThat(staticSetting.get(target.build()).intValue()).isEqualTo(6);
+        assertThat(target.build().getAsInt("archived.foo.bar", null).intValue()).isEqualTo(9);
 
         target = Settings.builder().put(currentSettings);
         update = Settings.builder();
-        assertTrue(service.updateDynamicSettings(Settings.builder().putNull("archived.foo.bar").build(),
-            target, update, "node"));
-        assertEquals(5, dynamicSetting.get(target.build()).intValue());
-        assertEquals(6, staticSetting.get(target.build()).intValue());
+        assertThat(service.updateDynamicSettings(Settings.builder().putNull("archived.foo.bar").build(),
+            target, update, "node")).isTrue();
+        assertThat(dynamicSetting.get(target.build()).intValue()).isEqualTo(5);
+        assertThat(staticSetting.get(target.build()).intValue()).isEqualTo(6);
         assertNull(target.build().getAsInt("archived.foo.bar", null));
 
         target = Settings.builder().put(currentSettings);
         update = Settings.builder();
-        assertTrue(service.updateDynamicSettings(Settings.builder().putNull("some.*").build(),
-            target, update, "node"));
-        assertEquals(1, dynamicSetting.get(target.build()).intValue());
-        assertEquals(6, staticSetting.get(target.build()).intValue());
-        assertEquals(9, target.build().getAsInt("archived.foo.bar", null).intValue());
+        assertThat(service.updateDynamicSettings(Settings.builder().putNull("some.*").build(),
+            target, update, "node")).isTrue();
+        assertThat(dynamicSetting.get(target.build()).intValue()).isEqualTo(1);
+        assertThat(staticSetting.get(target.build()).intValue()).isEqualTo(6);
+        assertThat(target.build().getAsInt("archived.foo.bar", null).intValue()).isEqualTo(9);
 
         target = Settings.builder().put(currentSettings);
         update = Settings.builder();
-        assertTrue(service.updateDynamicSettings(Settings.builder().putNull("*").build(),
-            target, update, "node"));
-        assertEquals(1, dynamicSetting.get(target.build()).intValue());
-        assertEquals(6, staticSetting.get(target.build()).intValue());
+        assertThat(service.updateDynamicSettings(Settings.builder().putNull("*").build(),
+            target, update, "node")).isTrue();
+        assertThat(dynamicSetting.get(target.build()).intValue()).isEqualTo(1);
+        assertThat(staticSetting.get(target.build()).intValue()).isEqualTo(6);
         assertNull(target.build().getAsInt("archived.foo.bar", null));
     }
 
@@ -130,8 +126,8 @@ public class ScopedSettingsTests extends ESTestCase {
         IndexScopedSettings settings = new IndexScopedSettings(currentSettings,
             new HashSet<>(Arrays.asList(dynamicSetting, IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING)));
         Map<String, String> s = IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getAsMap(currentSettings);
-        assertEquals(1, s.size());
-        assertEquals("192.168.0.1,127.0.0.1", s.get("_ip"));
+        assertThat(s.size()).isEqualTo(1);
+        assertThat(s.get("_ip")).isEqualTo("192.168.0.1,127.0.0.1");
         Settings.Builder builder = Settings.builder();
         Settings updates = Settings.builder().putNull("index.routing.allocation.require._ip")
             .put("index.some.dyn.setting", 1).build();
@@ -140,9 +136,9 @@ public class ScopedSettingsTests extends ESTestCase {
             Settings.builder().put(currentSettings), builder, "node");
         currentSettings = builder.build();
         s = IndexMetadata.INDEX_ROUTING_REQUIRE_GROUP_SETTING.getAsMap(currentSettings);
-        assertEquals(0, s.size());
-        assertEquals(1, dynamicSetting.get(currentSettings).intValue());
-        assertEquals(1, currentSettings.size());
+        assertThat(s.size()).isEqualTo(0);
+        assertThat(dynamicSetting.get(currentSettings).intValue()).isEqualTo(1);
+        assertThat(currentSettings.size()).isEqualTo(1);
     }
 
     @Test
@@ -158,7 +154,7 @@ public class ScopedSettingsTests extends ESTestCase {
             service.addSettingsUpdateConsumer(testSetting2, consumer2::set);
             fail("setting not registered");
         } catch (IllegalArgumentException ex) {
-            assertEquals("Setting is not registered for key [foo.bar.baz]", ex.getMessage());
+            assertThat(ex.getMessage()).isEqualTo("Setting is not registered for key [foo.bar.baz]");
         }
 
         try {
@@ -168,13 +164,13 @@ public class ScopedSettingsTests extends ESTestCase {
             });
             fail("setting not registered");
         } catch (IllegalArgumentException ex) {
-            assertEquals("Setting is not registered for key [foo.bar.baz]", ex.getMessage());
+            assertThat(ex.getMessage()).isEqualTo("Setting is not registered for key [foo.bar.baz]");
         }
-        assertEquals(0, consumer.get());
-        assertEquals(0, consumer2.get());
+        assertThat(consumer.get()).isEqualTo(0);
+        assertThat(consumer2.get()).isEqualTo(0);
         service.applySettings(Settings.builder().put("foo.bar", 2).put("foo.bar.baz", 15).build());
-        assertEquals(2, consumer.get());
-        assertEquals(0, consumer2.get());
+        assertThat(consumer.get()).isEqualTo(2);
+        assertThat(consumer2.get()).isEqualTo(0);
     }
 
     @Test
@@ -186,9 +182,9 @@ public class ScopedSettingsTests extends ESTestCase {
 
         AbstractScopedSettings service = new ClusterSettings(Settings.EMPTY, new HashSet<>(Arrays.asList(intSetting, stringSetting)));
 
-        IllegalArgumentException iae = expectThrows(IllegalArgumentException.class,
-            () -> service.validate(Settings.builder().put("foo.test.bar", 7).build(), true));
-        assertEquals("missing required setting [foo.test.name] for setting [foo.test.bar]", iae.getMessage());
+        assertThatThrownBy(() -> service.validate(Settings.builder().put("foo.test.bar", 7).build(), true))
+            .isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("missing required setting [foo.test.name] for setting [foo.test.bar]");
 
         service.validate(Settings.builder()
             .put("foo.test.name", "test")
@@ -211,7 +207,7 @@ public class ScopedSettingsTests extends ESTestCase {
             new Setting.AffixSettingDependency() {
 
                 @Override
-                public Setting.AffixSetting getSetting() {
+                public Setting.AffixSetting<?> getSetting() {
                     return stringSetting;
                 }
 
@@ -225,10 +221,9 @@ public class ScopedSettingsTests extends ESTestCase {
 
         AbstractScopedSettings service = new ClusterSettings(Settings.EMPTY, new HashSet<>(Arrays.asList(intSetting, stringSetting)));
 
-        SettingsException iae = expectThrows(
-            SettingsException.class,
-            () -> service.validate(Settings.builder().put("foo.test.bar", 7).put("foo.test.name", "invalid").build(), true));
-        assertEquals("[foo.test.bar] is set but [name] is [invalid]", iae.getMessage());
+        assertThatThrownBy(() -> service.validate(Settings.builder().put("foo.test.bar", 7).put("foo.test.name", "invalid").build(), true))
+            .isExactlyInstanceOf(SettingsException.class)
+            .hasMessage("[foo.test.bar] is set but [name] is [invalid]");
 
         service.validate(Settings.builder()
                 .put("foo.test.bar", 7)
@@ -265,10 +260,9 @@ public class ScopedSettingsTests extends ESTestCase {
         final AbstractScopedSettings service =
                 new ClusterSettings(Settings.EMPTY,new HashSet<>(Arrays.asList(nameFallbackSetting, nameSetting, barSetting)));
 
-        final IllegalArgumentException e = expectThrows(
-                IllegalArgumentException.class,
-                () -> service.validate(Settings.builder().put("foo.test.bar", 7).build(), true));
-        assertThat(e, hasToString(containsString("missing required setting [foo.test.name] for setting [foo.test.bar]")));
+        assertThatThrownBy(() -> service.validate(Settings.builder().put("foo.test.bar", 7).build(), true))
+            .isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("missing required setting [foo.test.name] for setting [foo.test.bar]");
 
         service.validate(Settings.builder().put("foo.test.name", "test").put("foo.test.bar", 7).build(), true);
         service.validate(Settings.builder().put("fallback.test.name", "test").put("foo.test.bar", 7).build(), true);
@@ -279,7 +273,7 @@ public class ScopedSettingsTests extends ESTestCase {
         Setting.AffixSetting<Integer> intSetting = Setting.affixKeySetting("foo.", "bar",
             (k) ->  Setting.intSetting(k, 1, Property.Dynamic, Property.NodeScope));
         Setting.AffixSetting<List<Integer>> listSetting = Setting.affixKeySetting("foo.", "list",
-            (k) -> Setting.listSetting(k, Arrays.asList("1"), Integer::parseInt, new ArrayType<>(DataTypes.INTEGER), Property.Dynamic, Property.NodeScope));
+            (k) -> Setting.listSetting(k, List.of("1"), Integer::parseInt, new ArrayType<>(DataTypes.INTEGER), Property.Dynamic, Property.NodeScope));
         AbstractScopedSettings service = new ClusterSettings(Settings.EMPTY,new HashSet<>(Arrays.asList(intSetting, listSetting)));
         Map<String, List<Integer>> listResults = new HashMap<>();
         Map<String, Integer> intResults = new HashMap<>();
@@ -289,20 +283,20 @@ public class ScopedSettingsTests extends ESTestCase {
 
         service.addAffixUpdateConsumer(listSetting, listConsumer, (s, k) -> {});
         service.addAffixUpdateConsumer(intSetting, intConsumer, (s, k) -> {});
-        assertEquals(0, listResults.size());
-        assertEquals(0, intResults.size());
+        assertThat(listResults.size()).isEqualTo(0);
+        assertThat(intResults.size()).isEqualTo(0);
         service.applySettings(Settings.builder()
             .put("foo.test.bar", 2)
             .put("foo.test_1.bar", 7)
             .putList("foo.test_list.list", "16", "17")
             .putList("foo.test_list_1.list", "18", "19", "20")
             .build());
-        assertEquals(2, intResults.get("test").intValue());
-        assertEquals(7, intResults.get("test_1").intValue());
-        assertEquals(Arrays.asList(16, 17), listResults.get("test_list"));
-        assertEquals(Arrays.asList(18, 19, 20), listResults.get("test_list_1"));
-        assertEquals(2, listResults.size());
-        assertEquals(2, intResults.size());
+        assertThat(intResults.get("test").intValue()).isEqualTo(2);
+        assertThat(intResults.get("test_1").intValue()).isEqualTo(7);
+        assertThat(listResults.get("test_list")).isEqualTo(Arrays.asList(16, 17));
+        assertThat(listResults.get("test_list_1")).isEqualTo(Arrays.asList(18, 19, 20));
+        assertThat(listResults.size()).isEqualTo(2);
+        assertThat(intResults.size()).isEqualTo(2);
 
         listResults.clear();
         intResults.clear();
@@ -314,11 +308,11 @@ public class ScopedSettingsTests extends ESTestCase {
             .putNull("foo.test_list_1.list")
             .build());
         assertNull("test wasn't changed", intResults.get("test"));
-        assertEquals(8, intResults.get("test_1").intValue());
+        assertThat(intResults.get("test_1").intValue()).isEqualTo(8);
         assertNull("test_list wasn't changed", listResults.get("test_list"));
-        assertEquals(Arrays.asList(1), listResults.get("test_list_1")); // reset to default
-        assertEquals(1, listResults.size());
-        assertEquals(1, intResults.size());
+        assertThat(listResults.get("test_list_1")).isEqualTo(List.of(1)); // reset to default
+        assertThat(listResults.size()).isEqualTo(1);
+        assertThat(intResults.size()).isEqualTo(1);
     }
 
 
@@ -327,7 +321,7 @@ public class ScopedSettingsTests extends ESTestCase {
         Setting.AffixSetting<Integer> intSetting = Setting.affixKeySetting("foo.", "bar",
             (k) ->  Setting.intSetting(k, 1, Property.Dynamic, Property.NodeScope));
         Setting.AffixSetting<List<Integer>> listSetting = Setting.affixKeySetting("foo.", "list",
-            (k) -> Setting.listSetting(k, Arrays.asList("1"), Integer::parseInt, DataTypes.INTEGER_ARRAY, Property.Dynamic, Property.NodeScope));
+            (k) -> Setting.listSetting(k, List.of("1"), Integer::parseInt, DataTypes.INTEGER_ARRAY, Property.Dynamic, Property.NodeScope));
         AbstractScopedSettings service = new ClusterSettings(Settings.EMPTY,new HashSet<>(Arrays.asList(intSetting, listSetting)));
         Map<String, List<Integer>> listResults = new HashMap<>();
         Map<String, Integer> intResults = new HashMap<>();
@@ -342,20 +336,20 @@ public class ScopedSettingsTests extends ESTestCase {
         };
         service.addAffixMapUpdateConsumer(listSetting, listConsumer, (s, k) -> {});
         service.addAffixMapUpdateConsumer(intSetting, intConsumer, (s, k) -> {});
-        assertEquals(0, listResults.size());
-        assertEquals(0, intResults.size());
+        assertThat(listResults.size()).isEqualTo(0);
+        assertThat(intResults.size()).isEqualTo(0);
         service.applySettings(Settings.builder()
             .put("foo.test.bar", 2)
             .put("foo.test_1.bar", 7)
             .putList("foo.test_list.list", "16", "17")
             .putList("foo.test_list_1.list", "18", "19", "20")
             .build());
-        assertEquals(2, intResults.get("test").intValue());
-        assertEquals(7, intResults.get("test_1").intValue());
-        assertEquals(Arrays.asList(16, 17), listResults.get("test_list"));
-        assertEquals(Arrays.asList(18, 19, 20), listResults.get("test_list_1"));
-        assertEquals(2, listResults.size());
-        assertEquals(2, intResults.size());
+        assertThat(intResults.get("test").intValue()).isEqualTo(2);
+        assertThat(intResults.get("test_1").intValue()).isEqualTo(7);
+        assertThat(listResults.get("test_list")).isEqualTo(Arrays.asList(16, 17));
+        assertThat(listResults.get("test_list_1")).isEqualTo(Arrays.asList(18, 19, 20));
+        assertThat(listResults.size()).isEqualTo(2);
+        assertThat(intResults.size()).isEqualTo(2);
 
         service.applySettings(Settings.builder()
             .put("foo.test.bar", 2)
@@ -364,12 +358,12 @@ public class ScopedSettingsTests extends ESTestCase {
             .putList("foo.test_list_1.list", "18", "19", "20")
             .build());
 
-        assertEquals(2, intResults.get("test").intValue());
-        assertEquals(7, intResults.get("test_1").intValue());
-        assertEquals(Arrays.asList(16, 17), listResults.get("test_list"));
-        assertEquals(Arrays.asList(18, 19, 20), listResults.get("test_list_1"));
-        assertEquals(2, listResults.size());
-        assertEquals(2, intResults.size());
+        assertThat(intResults.get("test").intValue()).isEqualTo(2);
+        assertThat(intResults.get("test_1").intValue()).isEqualTo(7);
+        assertThat(listResults.get("test_list")).isEqualTo(Arrays.asList(16, 17));
+        assertThat(listResults.get("test_list_1")).isEqualTo(Arrays.asList(18, 19, 20));
+        assertThat(listResults.size()).isEqualTo(2);
+        assertThat(intResults.size()).isEqualTo(2);
 
         listResults.clear();
         intResults.clear();
@@ -381,11 +375,11 @@ public class ScopedSettingsTests extends ESTestCase {
             .putNull("foo.test_list_1.list")
             .build());
         assertNull("test wasn't changed", intResults.get("test"));
-        assertEquals(8, intResults.get("test_1").intValue());
+        assertThat(intResults.get("test_1").intValue()).isEqualTo(8);
         assertNull("test_list wasn't changed", listResults.get("test_list"));
-        assertEquals(Arrays.asList(1), listResults.get("test_list_1")); // reset to default
-        assertEquals(1, listResults.size());
-        assertEquals(1, intResults.size());
+        assertThat(listResults.get("test_list_1")).isEqualTo(List.of(1)); // reset to default
+        assertThat(listResults.size()).isEqualTo(1);
+        assertThat(intResults.size()).isEqualTo(1);
     }
 
     @Test
@@ -403,19 +397,19 @@ public class ScopedSettingsTests extends ESTestCase {
             affixResults.putAll(map);
         };
         service.addAffixMapUpdateConsumer(prefixSetting, consumer, (s, k) -> {});
-        assertEquals(0, affixResults.size());
+        assertThat(affixResults.size()).isEqualTo(0);
         service.applySettings(Settings.builder()
                 .put("eggplant._name", 2)
                 .build());
-        assertThat(affixResults.size(), equalTo(1));
-        assertThat(affixResults.get("_name"), equalTo(2));
+        assertThat(affixResults).hasSize(1);
+        assertThat(affixResults.get("_name")).isEqualTo(2);
 
         service.applySettings(Settings.builder()
                 .put("eggplant._name", 2)
                 .put("other.thing", 3)
                 .build());
 
-        assertThat(affixResults.get("_name"), equalTo(2));
+        assertThat(affixResults.get("_name")).isEqualTo(2);
     }
 
 
@@ -437,42 +431,42 @@ public class ScopedSettingsTests extends ESTestCase {
             bC.set(b);
         });
 
-        assertEquals(0, consumer.get());
-        assertEquals(0, consumer2.get());
-        assertEquals(0, aC.get());
-        assertEquals(0, bC.get());
+        assertThat(consumer.get()).isEqualTo(0);
+        assertThat(consumer2.get()).isEqualTo(0);
+        assertThat(aC.get()).isEqualTo(0);
+        assertThat(bC.get()).isEqualTo(0);
         try {
             service.applySettings(Settings.builder().put("foo.bar", 2).put("foo.bar.baz", -15).build());
             fail("invalid value");
         } catch (IllegalArgumentException ex) {
-            assertEquals("illegal value can't update [foo.bar.baz] from [1] to [-15]", ex.getMessage());
+            assertThat(ex.getMessage()).isEqualTo("illegal value can't update [foo.bar.baz] from [1] to [-15]");
         }
-        assertEquals(0, consumer.get());
-        assertEquals(0, consumer2.get());
-        assertEquals(0, aC.get());
-        assertEquals(0, bC.get());
+        assertThat(consumer.get()).isEqualTo(0);
+        assertThat(consumer2.get()).isEqualTo(0);
+        assertThat(aC.get()).isEqualTo(0);
+        assertThat(bC.get()).isEqualTo(0);
         try {
             service.validateUpdate(Settings.builder().put("foo.bar", 2).put("foo.bar.baz", -15).build());
             fail("invalid value");
         } catch (IllegalArgumentException ex) {
-            assertEquals("illegal value can't update [foo.bar.baz] from [1] to [-15]", ex.getMessage());
+            assertThat(ex.getMessage()).isEqualTo("illegal value can't update [foo.bar.baz] from [1] to [-15]");
         }
 
-        assertEquals(0, consumer.get());
-        assertEquals(0, consumer2.get());
-        assertEquals(0, aC.get());
-        assertEquals(0, bC.get());
+        assertThat(consumer.get()).isEqualTo(0);
+        assertThat(consumer2.get()).isEqualTo(0);
+        assertThat(aC.get()).isEqualTo(0);
+        assertThat(bC.get()).isEqualTo(0);
         service.validateUpdate(Settings.builder().put("foo.bar", 2).put("foo.bar.baz", 15).build());
-        assertEquals(0, consumer.get());
-        assertEquals(0, consumer2.get());
-        assertEquals(0, aC.get());
-        assertEquals(0, bC.get());
+        assertThat(consumer.get()).isEqualTo(0);
+        assertThat(consumer2.get()).isEqualTo(0);
+        assertThat(aC.get()).isEqualTo(0);
+        assertThat(bC.get()).isEqualTo(0);
 
         service.applySettings(Settings.builder().put("foo.bar", 2).put("foo.bar.baz", 15).build());
-        assertEquals(2, consumer.get());
-        assertEquals(15, consumer2.get());
-        assertEquals(2, aC.get());
-        assertEquals(15, bC.get());
+        assertThat(consumer.get()).isEqualTo(2);
+        assertThat(consumer2.get()).isEqualTo(15);
+        assertThat(aC.get()).isEqualTo(2);
+        assertThat(bC.get()).isEqualTo(15);
     }
 
     @Test
@@ -480,11 +474,10 @@ public class ScopedSettingsTests extends ESTestCase {
         ClusterSettings settings = new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
         // affix setting - complex matcher
         Setting<?> setting = settings.get("cluster.routing.allocation.require.value");
-        assertEquals(setting,
-            FilterAllocationDecider.CLUSTER_ROUTING_REQUIRE_GROUP_SETTING.getConcreteSetting("cluster.routing.allocation.require.value"));
+        assertThat(FilterAllocationDecider.CLUSTER_ROUTING_REQUIRE_GROUP_SETTING.getConcreteSetting("cluster.routing.allocation.require.value")).isEqualTo(setting);
 
         setting = settings.get("cluster.routing.allocation.total_shards_per_node");
-        assertEquals(setting, ShardsLimitAllocationDecider.CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING);
+        assertThat(ShardsLimitAllocationDecider.CLUSTER_TOTAL_SHARDS_PER_NODE_SETTING).isEqualTo(setting);
     }
 
     @Test
@@ -493,8 +486,8 @@ public class ScopedSettingsTests extends ESTestCase {
             new ClusterSettings(Settings.EMPTY,
                 new HashSet<>(Arrays.asList(Setting.intSetting("foo.bar", 1, Property.Dynamic, Property.NodeScope),
                     Setting.intSetting("foo.bar.baz", 1, Property.NodeScope))));
-        assertFalse(settings.isDynamicSetting("foo.bar.baz"));
-        assertTrue(settings.isDynamicSetting("foo.bar"));
+        assertThat(settings.isDynamicSetting("foo.bar.baz")).isFalse();
+        assertThat(settings.isDynamicSetting("foo.bar")).isTrue();
         assertNotNull(settings.get("foo.bar.baz"));
     }
 
@@ -507,15 +500,15 @@ public class ScopedSettingsTests extends ESTestCase {
                     Setting.groupSetting("foo.list.",  Property.Final, Property.NodeScope),
                     Setting.intSetting("foo.int.baz", 1, Property.NodeScope))));
 
-        assertFalse(settings.isFinalSetting("foo.int.baz"));
-        assertTrue(settings.isFinalSetting("foo.int"));
+        assertThat(settings.isFinalSetting("foo.int.baz")).isFalse();
+        assertThat(settings.isFinalSetting("foo.int")).isTrue();
 
-        assertFalse(settings.isFinalSetting("foo.list"));
-        assertTrue(settings.isFinalSetting("foo.list.0.key"));
-        assertTrue(settings.isFinalSetting("foo.list.key"));
+        assertThat(settings.isFinalSetting("foo.list")).isFalse();
+        assertThat(settings.isFinalSetting("foo.list.0.key")).isTrue();
+        assertThat(settings.isFinalSetting("foo.list.key")).isTrue();
 
-        assertFalse(settings.isFinalSetting("foo.group"));
-        assertTrue(settings.isFinalSetting("foo.group.key"));
+        assertThat(settings.isFinalSetting("foo.group")).isFalse();
+        assertThat(settings.isFinalSetting("foo.group.key")).isTrue();
     }
 
     @Test
@@ -530,36 +523,36 @@ public class ScopedSettingsTests extends ESTestCase {
         ClusterSettings settings = new ClusterSettings(Settings.EMPTY, new HashSet<>(Arrays.asList(fooBar, fooBarBaz, foorBarQuux,
             someGroup, someAffix)));
         Settings diff = settings.diff(Settings.builder().put("foo.bar", 5).build(), Settings.EMPTY);
-        assertEquals(2, diff.size());
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("a", "b", "c"));
+        assertThat(diff.size()).isEqualTo(2);
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(Arrays.asList("a", "b", "c")).isEqualTo(diff.getAsList("foo.bar.quux", null));
 
         diff = settings.diff(
                 Settings.builder().put("foo.bar", 5).build(),
                 Settings.builder().put("foo.bar.baz", 17).putList("foo.bar.quux", "d", "e", "f").build());
-        assertEquals(2, diff.size());
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(17));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("d", "e", "f"));
+        assertThat(diff.size()).isEqualTo(2);
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(17);
+        assertThat(Arrays.asList("d", "e", "f")).isEqualTo(diff.getAsList("foo.bar.quux", null));
 
         diff = settings.diff(
             Settings.builder().put("some.group.foo", 5).build(),
             Settings.builder().put("some.group.foobar", 17).put("some.group.foo", 25).build());
-        assertEquals(4, diff.size());
-        assertThat(diff.getAsInt("some.group.foobar", null), equalTo(17));
+        assertThat(diff.size()).isEqualTo(4);
+        assertThat(diff.getAsInt("some.group.foobar", null)).isEqualTo(17);
         assertNull(diff.get("some.group.foo"));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("a", "b", "c"));
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertThat(diff.getAsInt("foo.bar", null), equalTo(1));
+        assertThat(Arrays.asList("a", "b", "c")).isEqualTo(diff.getAsList("foo.bar.quux", null));
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar", null)).isEqualTo(1);
 
         diff = settings.diff(
             Settings.builder().put("some.prefix.foo.somekey", 5).build(),
             Settings.builder().put("some.prefix.foobar.somekey", 17).put("some.prefix.foo.somekey", 18).build());
-        assertEquals(4, diff.size());
-        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null), equalTo(17));
+        assertThat(diff.size()).isEqualTo(4);
+        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null)).isEqualTo(17);
         assertNull(diff.get("some.prefix.foo.somekey"));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("a", "b", "c"));
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertThat(diff.getAsInt("foo.bar", null), equalTo(1));
+        assertThat(Arrays.asList("a", "b", "c")).isEqualTo(diff.getAsList("foo.bar.quux", null));
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar", null)).isEqualTo(1);
     }
 
     @Test
@@ -574,36 +567,36 @@ public class ScopedSettingsTests extends ESTestCase {
         ClusterSettings settings = new ClusterSettings(Settings.EMPTY, new HashSet<>(Arrays.asList(fooBar, fooBarBaz, foorBarQuux,
             someGroup, someAffix)));
         Settings diff = settings.diff(Settings.builder().put("foo.bar", 5).build(), Settings.EMPTY);
-        assertEquals(1, diff.size());
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
+        assertThat(diff.size()).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
         assertNull(diff.getAsList("foo.bar.quux", null)); // affix settings don't know their concrete keys
 
         diff = settings.diff(
             Settings.builder().put("foo.bar", 5).build(),
             Settings.builder().put("foo.bar.baz", 17).putList("foo.bar.quux", "d", "e", "f").build());
-        assertEquals(2, diff.size());
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(17));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("d", "e", "f"));
+        assertThat(diff.size()).isEqualTo(2);
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(17);
+        assertThat(Arrays.asList("d", "e", "f")).isEqualTo(diff.getAsList("foo.bar.quux", null));
 
         diff = settings.diff(
             Settings.builder().put("some.group.foo", 5).build(),
             Settings.builder().put("some.group.foobar", 17).put("some.group.foo", 25).build());
-        assertEquals(3, diff.size());
-        assertThat(diff.getAsInt("some.group.foobar", null), equalTo(17));
+        assertThat(diff.size()).isEqualTo(3);
+        assertThat(diff.getAsInt("some.group.foobar", null)).isEqualTo(17);
         assertNull(diff.get("some.group.foo"));
         assertNull(diff.getAsList("foo.bar.quux", null)); // affix settings don't know their concrete keys
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertThat(diff.getAsInt("foo.bar", null), equalTo(1));
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar", null)).isEqualTo(1);
 
         diff = settings.diff(
             Settings.builder().put("some.prefix.foo.somekey", 5).build(),
             Settings.builder().put("some.prefix.foobar.somekey", 17).put("some.prefix.foo.somekey", 18).build());
-        assertEquals(3, diff.size());
-        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null), equalTo(17));
+        assertThat(diff.size()).isEqualTo(3);
+        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null)).isEqualTo(17);
         assertNull(diff.get("some.prefix.foo.somekey"));
         assertNull(diff.getAsList("foo.bar.quux", null)); // affix settings don't know their concrete keys
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertThat(diff.getAsInt("foo.bar", null), equalTo(1));
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar", null)).isEqualTo(1);
 
         diff = settings.diff(
             Settings.builder().put("some.prefix.foo.somekey", 5).build(),
@@ -611,13 +604,13 @@ public class ScopedSettingsTests extends ESTestCase {
             .putList("foo.bar.quux", "x", "y", "z")
             .putList("foo.baz.quux", "d", "e", "f")
                 .build());
-        assertEquals(5, diff.size());
-        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null), equalTo(17));
+        assertThat(diff.size()).isEqualTo(5);
+        assertThat(diff.getAsInt("some.prefix.foobar.somekey", null)).isEqualTo(17);
         assertNull(diff.get("some.prefix.foo.somekey"));
-        assertEquals(diff.getAsList("foo.bar.quux", null), Arrays.asList("x", "y", "z"));
-        assertEquals(diff.getAsList("foo.baz.quux", null), Arrays.asList("d", "e", "f"));
-        assertThat(diff.getAsInt("foo.bar.baz", null), equalTo(1));
-        assertThat(diff.getAsInt("foo.bar", null), equalTo(1));
+        assertThat(Arrays.asList("x", "y", "z")).isEqualTo(diff.getAsList("foo.bar.quux", null));
+        assertThat(Arrays.asList("d", "e", "f")).isEqualTo(diff.getAsList("foo.baz.quux", null));
+        assertThat(diff.getAsInt("foo.bar.baz", null)).isEqualTo(1);
+        assertThat(diff.getAsInt("foo.bar", null)).isEqualTo(1);
     }
 
     @Test
@@ -627,9 +620,9 @@ public class ScopedSettingsTests extends ESTestCase {
             IndexScopedSettings.BUILT_IN_INDEX_SETTINGS);
         IndexScopedSettings copy = settings.copy(Settings.builder().put("index.store.type", "boom").build(),
                 newIndexMeta("foo", Settings.builder().put(IndexMetadata.SETTING_NUMBER_OF_REPLICAS, 3).build()));
-        assertEquals(3, copy.get(IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING).intValue());
-        assertEquals(1, copy.get(IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING).intValue());
-        assertEquals("boom", copy.get(IndexModule.INDEX_STORE_TYPE_SETTING)); // test fallback to node settings
+        assertThat(copy.get(IndexMetadata.INDEX_NUMBER_OF_REPLICAS_SETTING).intValue()).isEqualTo(3);
+        assertThat(copy.get(IndexMetadata.INDEX_NUMBER_OF_SHARDS_SETTING).intValue()).isEqualTo(1);
+        assertThat(copy.get(IndexModule.INDEX_STORE_TYPE_SETTING)).isEqualTo("boom"); // test fallback to node settings
     }
 
     @Test
@@ -637,9 +630,9 @@ public class ScopedSettingsTests extends ESTestCase {
         IndexScopedSettings settings = new IndexScopedSettings(
             Settings.EMPTY,
             IndexScopedSettings.BUILT_IN_INDEX_SETTINGS);
-        IllegalArgumentException iae = expectThrows(IllegalArgumentException.class,
-            () -> settings.validate(Settings.builder().put("index.numbe_of_replica", "1").build(), false));
-        assertEquals(iae.getMessage(), "unknown setting [index.numbe_of_replica] did you mean [index.number_of_replicas]?");
+        assertThatThrownBy(() -> settings.validate(Settings.builder().put("index.numbe_of_replica", "1").build(), false))
+            .isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("unknown setting [index.numbe_of_replica] did you mean [index.number_of_replicas]?");
     }
 
     @Test
@@ -651,17 +644,20 @@ public class ScopedSettingsTests extends ESTestCase {
             " removed settings";
         settings.validate(Settings.builder().put("index.store.type", "boom").build(), false);
 
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            settings.validate(Settings.builder().put("index.store.type", "boom").put("i.am.not.a.setting", true).build(), false));
-        assertEquals("unknown setting [i.am.not.a.setting]" + unknownMsgSuffix, e.getMessage());
+        assertThatThrownBy(() ->
+            settings.validate(Settings.builder().put("index.store.type", "boom").put("i.am.not.a.setting", true).build(), false)
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("unknown setting [i.am.not.a.setting]" + unknownMsgSuffix);
 
-        e = expectThrows(IllegalArgumentException.class, () ->
-            settings.validate(Settings.builder().put("index.store.type", "boom").put("index.number_of_replicas", true).build(), false));
-        assertEquals("Failed to parse value [true] for setting [index.number_of_replicas]", e.getMessage());
+        assertThatThrownBy(() ->
+            settings.validate(Settings.builder().put("index.store.type", "boom").put("index.number_of_replicas", true).build(), false)
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("Failed to parse value [true] for setting [index.number_of_replicas]");
 
-        e = expectThrows(IllegalArgumentException.class, () ->
-            settings.validate("index.number_of_replicas", Settings.builder().put("index.number_of_replicas", "true").build(), false));
-        assertEquals("Failed to parse value [true] for setting [index.number_of_replicas]", e.getMessage());
+        assertThatThrownBy(() ->
+            settings.validate("index.number_of_replicas", Settings.builder().put("index.number_of_replicas", "true").build(), false)
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("Failed to parse value [true] for setting [index.number_of_replicas]");
     }
 
     public static IndexMetadata newIndexMeta(String name, Settings indexSettings) {
@@ -670,26 +666,25 @@ public class ScopedSettingsTests extends ESTestCase {
             .put(IndexMetadata.SETTING_NUMBER_OF_SHARDS, 1)
             .put(indexSettings)
             .build();
-        IndexMetadata metadata = IndexMetadata.builder(name).settings(build).build();
-        return metadata;
+        return IndexMetadata.builder(name).settings(build).build();
     }
 
     @Test
     public void testKeyPattern() {
-        assertTrue(AbstractScopedSettings.isValidKey("a.b.c-b.d"));
-        assertTrue(AbstractScopedSettings.isValidKey("a.b.c.d"));
-        assertTrue(AbstractScopedSettings.isValidKey("a.b_012.c_b.d"));
-        assertTrue(AbstractScopedSettings.isValidKey("a"));
-        assertFalse(AbstractScopedSettings.isValidKey("a b"));
-        assertFalse(AbstractScopedSettings.isValidKey(""));
-        assertFalse(AbstractScopedSettings.isValidKey("\""));
+        assertThat(AbstractScopedSettings.isValidKey("a.b.c-b.d")).isTrue();
+        assertThat(AbstractScopedSettings.isValidKey("a.b.c.d")).isTrue();
+        assertThat(AbstractScopedSettings.isValidKey("a.b_012.c_b.d")).isTrue();
+        assertThat(AbstractScopedSettings.isValidKey("a")).isTrue();
+        assertThat(AbstractScopedSettings.isValidKey("a b")).isFalse();
+        assertThat(AbstractScopedSettings.isValidKey("")).isFalse();
+        assertThat(AbstractScopedSettings.isValidKey("\"")).isFalse();
 
         try {
             new IndexScopedSettings(
                 Settings.EMPTY, Collections.singleton(Setting.groupSetting("foo.bar.", Property.IndexScope)));
             fail();
         } catch (IllegalArgumentException e) {
-            assertEquals("illegal settings key: [foo.bar.] must start with [index.]", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("illegal settings key: [foo.bar.] must start with [index.]");
         }
 
         try {
@@ -697,7 +692,7 @@ public class ScopedSettingsTests extends ESTestCase {
                 Settings.EMPTY, Collections.singleton(Setting.simpleString("foo.bar", Property.IndexScope)));
             fail();
         } catch (IllegalArgumentException e) {
-            assertEquals("illegal settings key: [foo.bar] must start with [index.]", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("illegal settings key: [foo.bar] must start with [index.]");
         }
 
         try {
@@ -705,7 +700,7 @@ public class ScopedSettingsTests extends ESTestCase {
                 Settings.EMPTY, Collections.singleton(Setting.groupSetting("index. foo.", Property.IndexScope)));
             fail();
         } catch (IllegalArgumentException e) {
-            assertEquals("illegal settings key: [index. foo.]", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("illegal settings key: [index. foo.]");
         }
         new IndexScopedSettings(
             Settings.EMPTY, Collections.singleton(Setting.groupSetting("index.", Property.IndexScope)));
@@ -714,7 +709,7 @@ public class ScopedSettingsTests extends ESTestCase {
                 Settings.EMPTY, Collections.singleton(Setting.boolSetting("index.", true, Property.IndexScope)));
             fail();
         } catch (IllegalArgumentException e) {
-            assertEquals("illegal settings key: [index.]", e.getMessage());
+            assertThat(e.getMessage()).isEqualTo("illegal settings key: [index.]");
         }
         new IndexScopedSettings(
             Settings.EMPTY, Collections.singleton(Setting.boolSetting("index.boo", true, Property.IndexScope)));
@@ -725,14 +720,14 @@ public class ScopedSettingsTests extends ESTestCase {
 
     @Test
     public void testAffixKeyPattern() {
-        assertTrue(AbstractScopedSettings.isValidAffixKey("prefix.*.suffix"));
-        assertTrue(AbstractScopedSettings.isValidAffixKey("prefix.*.split.suffix"));
-        assertTrue(AbstractScopedSettings.isValidAffixKey("split.prefix.*.split.suffix"));
-        assertFalse(AbstractScopedSettings.isValidAffixKey("prefix.*.suffix."));
-        assertFalse(AbstractScopedSettings.isValidAffixKey("prefix.*"));
-        assertFalse(AbstractScopedSettings.isValidAffixKey("*.suffix"));
-        assertFalse(AbstractScopedSettings.isValidAffixKey("*"));
-        assertFalse(AbstractScopedSettings.isValidAffixKey(""));
+        assertThat(AbstractScopedSettings.isValidAffixKey("prefix.*.suffix")).isTrue();
+        assertThat(AbstractScopedSettings.isValidAffixKey("prefix.*.split.suffix")).isTrue();
+        assertThat(AbstractScopedSettings.isValidAffixKey("split.prefix.*.split.suffix")).isTrue();
+        assertThat(AbstractScopedSettings.isValidAffixKey("prefix.*.suffix.")).isFalse();
+        assertThat(AbstractScopedSettings.isValidAffixKey("prefix.*")).isFalse();
+        assertThat(AbstractScopedSettings.isValidAffixKey("*.suffix")).isFalse();
+        assertThat(AbstractScopedSettings.isValidAffixKey("*")).isFalse();
+        assertThat(AbstractScopedSettings.isValidAffixKey("")).isFalse();
     }
 
     @Test
@@ -743,20 +738,18 @@ public class ScopedSettingsTests extends ESTestCase {
         Settings.Builder builder = Settings.builder().put("logger.level", property);
         try {
             ClusterSettings settings = new ClusterSettings(builder.build(), ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
-            IllegalArgumentException ex =
-                expectThrows(
-                    IllegalArgumentException.class,
-                    () -> settings.validate(Settings.builder().put("logger._root", "boom").build(), false));
-            assertEquals("Unknown level constant [BOOM].", ex.getMessage());
-            assertEquals(level, LogManager.getRootLogger().getLevel());
+            assertThatThrownBy(() -> settings.validate(Settings.builder().put("logger._root", "boom").build(), false))
+                .isExactlyInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Unknown level constant [BOOM].");
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(level);
             settings.applySettings(Settings.builder().put("logger._root", "TRACE").build());
-            assertEquals(Level.TRACE, LogManager.getRootLogger().getLevel());
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(Level.TRACE);
             settings.applySettings(Settings.builder().build());
-            assertEquals(property, LogManager.getRootLogger().getLevel());
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(property);
             settings.applySettings(Settings.builder().put("logger.test", "TRACE").build());
-            assertEquals(Level.TRACE, LogManager.getLogger("test").getLevel());
+            assertThat(LogManager.getLogger("test").getLevel()).isEqualTo(Level.TRACE);
             settings.applySettings(Settings.builder().build());
-            assertEquals(property, LogManager.getLogger("test").getLevel());
+            assertThat(LogManager.getLogger("test").getLevel()).isEqualTo(property);
         } finally {
             Loggers.setLevel(LogManager.getRootLogger(), level);
             Loggers.setLevel(LogManager.getLogger("test"), testLevel);
@@ -769,11 +762,11 @@ public class ScopedSettingsTests extends ESTestCase {
         try {
             ClusterSettings settings =
                 new ClusterSettings(Settings.builder().put("logger.level", "ERROR").build(), ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
-            assertEquals(level, LogManager.getRootLogger().getLevel());
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(level);
             settings.applySettings(Settings.builder().put("logger._root", "TRACE").build());
-            assertEquals(Level.TRACE, LogManager.getRootLogger().getLevel());
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(Level.TRACE);
             settings.applySettings(Settings.builder().build()); // here we fall back to 'logger.level' which is our default.
-            assertEquals(Level.ERROR, LogManager.getRootLogger().getLevel());
+            assertThat(LogManager.getRootLogger().getLevel()).isEqualTo(Level.ERROR);
         } finally {
             Loggers.setLevel(LogManager.getRootLogger(), level);
         }
@@ -794,9 +787,9 @@ public class ScopedSettingsTests extends ESTestCase {
             fail("an exception should have been thrown because settings overlap");
         } catch (IllegalArgumentException e) {
             if (groupFirst) {
-                assertEquals("complex setting key: [foo.bar] overlaps existing setting key: [foo.]", e.getMessage());
+                assertThat(e.getMessage()).isEqualTo("complex setting key: [foo.bar] overlaps existing setting key: [foo.]");
             } else {
-                assertEquals("complex setting key: [foo.] overlaps existing setting key: [foo.bar]", e.getMessage());
+                assertThat(e.getMessage()).isEqualTo("complex setting key: [foo.] overlaps existing setting key: [foo.bar]");
             }
         }
     }
@@ -805,11 +798,10 @@ public class ScopedSettingsTests extends ESTestCase {
     public void testUpdateNumberOfShardsFail() {
         IndexScopedSettings settings = new IndexScopedSettings(Settings.EMPTY,
             IndexScopedSettings.BUILT_IN_INDEX_SETTINGS);
-        IllegalArgumentException ex = expectThrows(IllegalArgumentException.class,
-            () -> settings.updateSettings(Settings.builder().put("index.number_of_shards", 8).build(),
-                Settings.builder(), Settings.builder(), "index"));
-        assertThat(ex.getMessage(),
-            containsString("final index setting [index.number_of_shards], not updateable"));
+        assertThatThrownBy(() -> settings.updateSettings(Settings.builder().put("index.number_of_shards", 8).build(),
+                Settings.builder(), Settings.builder(), "index")
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("final index setting [index.number_of_shards], not updateable");
     }
 
     @Test
@@ -823,25 +815,29 @@ public class ScopedSettingsTests extends ESTestCase {
         ClusterSettings service = new ClusterSettings(currentSettings
             , new HashSet<>(Arrays.asList(finalSetting, finalGroupSetting)));
 
-        IllegalArgumentException exc = expectThrows(IllegalArgumentException.class, () ->
+        assertThatThrownBy(() ->
             service.updateDynamicSettings(Settings.builder().put("some.final.setting", 8).build(),
-                Settings.builder().put(currentSettings), Settings.builder(), "node"));
-        assertThat(exc.getMessage(), containsString("final node setting [some.final.setting]"));
+                Settings.builder().put(currentSettings), Settings.builder(), "node")
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("final node setting [some.final.setting]");
 
-        exc = expectThrows(IllegalArgumentException.class, () ->
+        assertThatThrownBy(() ->
             service.updateDynamicSettings(Settings.builder().putNull("some.final.setting").build(),
-                Settings.builder().put(currentSettings), Settings.builder(), "node"));
-        assertThat(exc.getMessage(), containsString("final node setting [some.final.setting]"));
+                Settings.builder().put(currentSettings), Settings.builder(), "node")
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("final node setting [some.final.setting]");
 
-        exc = expectThrows(IllegalArgumentException.class, () ->
+        assertThatThrownBy(() ->
             service.updateSettings(Settings.builder().put("some.final.group.new", 8).build(),
-                Settings.builder().put(currentSettings), Settings.builder(), "node"));
-        assertThat(exc.getMessage(), containsString("final node setting [some.final.group.new]"));
+                Settings.builder().put(currentSettings), Settings.builder(), "node")
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("final node setting [some.final.group.new]");
 
-        exc = expectThrows(IllegalArgumentException.class, () ->
+        assertThatThrownBy(() ->
             service.updateSettings(Settings.builder().put("some.final.group.foo", 5).build(),
-                Settings.builder().put(currentSettings), Settings.builder(), "node"));
-        assertThat(exc.getMessage(), containsString("final node setting [some.final.group.foo]"));
+                Settings.builder().put(currentSettings), Settings.builder(), "node")
+        ).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("final node setting [some.final.group.foo]");
     }
 
     @Test
@@ -849,14 +845,11 @@ public class ScopedSettingsTests extends ESTestCase {
         final Setting<String> indexInternalSetting = Setting.simpleString("index.internal", Property.InternalIndex, Property.IndexScope);
         final IndexScopedSettings indexScopedSettings =
                 new IndexScopedSettings(Settings.EMPTY, Collections.singleton(indexInternalSetting));
-        final IllegalArgumentException e = expectThrows(
-                IllegalArgumentException.class,
-                () -> {
-                    final Settings settings = Settings.builder().put("index.internal", "internal").build();
-                    indexScopedSettings.validate(settings, false, /* validateInternalOrPrivateIndex */ true);
-                });
-        final String message = "can not update internal setting [index.internal]; this setting is managed via a dedicated API";
-        assertThat(e, hasToString(containsString(message)));
+        assertThatThrownBy(() -> {
+            final Settings settings = Settings.builder().put("index.internal", "internal").build();
+            indexScopedSettings.validate(settings, false, /* validateInternalOrPrivateIndex */ true);
+        }).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("can not update internal setting [index.internal]; this setting is managed via a dedicated API");
     }
 
     @Test
@@ -864,14 +857,11 @@ public class ScopedSettingsTests extends ESTestCase {
         final Setting<String> indexInternalSetting = Setting.simpleString("index.private", Property.PrivateIndex, Property.IndexScope);
         final IndexScopedSettings indexScopedSettings =
                 new IndexScopedSettings(Settings.EMPTY, Collections.singleton(indexInternalSetting));
-        final IllegalArgumentException e = expectThrows(
-                IllegalArgumentException.class,
-                () -> {
-                    final Settings settings = Settings.builder().put("index.private", "private").build();
-                    indexScopedSettings.validate(settings, false, /* validateInternalOrPrivateIndex */ true);
-                });
-        final String message = "can not update private setting [index.private]; this setting is managed by CrateDB";
-        assertThat(e, hasToString(containsString(message)));
+        assertThatThrownBy(() -> {
+            final Settings settings = Settings.builder().put("index.private", "private").build();
+            indexScopedSettings.validate(settings, false, /* validateInternalOrPrivateIndex */ true);
+        }).isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessageContaining("can not update private setting [index.private]; this setting is managed by CrateDB");
     }
 
     @Test
@@ -930,11 +920,11 @@ public class ScopedSettingsTests extends ESTestCase {
                         .put("foo.remaining", randomAlphaOfLength(8))
                         .build();
         final Settings upgradedSettings = service.upgradeSettings(settings);
-        assertFalse(oldSetting.exists(upgradedSettings));
-        assertTrue(newSetting.exists(upgradedSettings));
-        assertThat(newSetting.get(upgradedSettings), equalTo("new." + oldSetting.get(settings)));
-        assertTrue(remainingSetting.exists(upgradedSettings));
-        assertThat(remainingSetting.get(upgradedSettings), equalTo(remainingSetting.get(settings)));
+        assertThat(oldSetting.exists(upgradedSettings)).isFalse();
+        assertThat(newSetting.exists(upgradedSettings)).isTrue();
+        assertThat(newSetting.get(upgradedSettings)).isEqualTo("new." + oldSetting.get(settings));
+        assertThat(remainingSetting.exists(upgradedSettings)).isTrue();
+        assertThat(remainingSetting.get(upgradedSettings)).isEqualTo(remainingSetting.get(settings));
     }
 
     @Test
@@ -964,7 +954,7 @@ public class ScopedSettingsTests extends ESTestCase {
 
         final Settings settings = Settings.builder().put("foo.remaining", randomAlphaOfLength(8)).build();
         final Settings upgradedSettings = service.upgradeSettings(settings);
-        assertThat(upgradedSettings, sameInstance(settings));
+        assertThat(upgradedSettings).isSameAs(settings);
     }
 
     @Test
@@ -1012,15 +1002,13 @@ public class ScopedSettingsTests extends ESTestCase {
         final Settings settings = builder.build();
         final Settings upgradedSettings = service.upgradeSettings(settings);
         for (final String concrete : concretes) {
-            assertFalse(oldSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings));
-            assertTrue(newSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings));
+            assertThat(oldSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings)).isFalse();
+            assertThat(newSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings)).isTrue();
             assertThat(
-                    newSetting.getConcreteSettingForNamespace(concrete).get(upgradedSettings),
-                    equalTo("new." + oldSetting.getConcreteSettingForNamespace(concrete).get(settings)));
-            assertTrue(remainingSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings));
+                    newSetting.getConcreteSettingForNamespace(concrete).get(upgradedSettings)).isEqualTo("new." + oldSetting.getConcreteSettingForNamespace(concrete).get(settings));
+            assertThat(remainingSetting.getConcreteSettingForNamespace(concrete).exists(upgradedSettings)).isTrue();
             assertThat(
-                    remainingSetting.getConcreteSettingForNamespace(concrete).get(upgradedSettings),
-                    equalTo(remainingSetting.getConcreteSettingForNamespace(concrete).get(settings)));
+                    remainingSetting.getConcreteSettingForNamespace(concrete).get(upgradedSettings)).isEqualTo(remainingSetting.getConcreteSettingForNamespace(concrete).get(settings));
         }
     }
 
@@ -1062,11 +1050,10 @@ public class ScopedSettingsTests extends ESTestCase {
 
         final Settings settings = Settings.builder().putList("foo.old", values).build();
         final Settings upgradedSettings = service.upgradeSettings(settings);
-        assertFalse(oldSetting.exists(upgradedSettings));
-        assertTrue(newSetting.exists(upgradedSettings));
+        assertThat(oldSetting.exists(upgradedSettings)).isFalse();
+        assertThat(newSetting.exists(upgradedSettings)).isTrue();
         assertThat(
-                newSetting.get(upgradedSettings),
-                equalTo(oldSetting.get(settings).stream().map(s -> "new." + s).collect(Collectors.toList())));
+                newSetting.get(upgradedSettings)).isEqualTo(oldSetting.get(settings).stream().map(s -> "new." + s).collect(Collectors.toList()));
     }
 
     @Test
